// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Heading default 1`] = `
<div
  className=" css-dh1bbr-style-style"
>
  <div
    className="css-1iw6y2c-style-style-style"
  >
    <h1
      dangerouslySetInnerHTML={
        Object {
          "__html": "Harding headline ipsum dolor sit amet, consectetur adipiscing",
        }
      }
    />
    <p
      dangerouslySetInnerHTML={
        Object {
          "__html": "Incididunt ut labore et dolore magna aliqua. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporUt enim ad minim veniam, quis nostrud exercitation.",
        }
      }
    />
    <div
      className=" css-p763m0-style-style"
    >
      <p
        className="font-weight:bold"
        dangerouslySetInnerHTML={
          Object {
            "__html": "The author",
          }
        }
      />
      <p
        className="font-weight:bold"
        dangerouslySetInnerHTML={
          Object {
            "__html": "The photographer",
          }
        }
      />
      <time
        dateTime="2019-09-18"
        itemProp="datePublished"
      >
        18 September 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/Box default 1`] = `
<div
  className="box css-2ax6e4-style-style"
>
  <div
    className="content"
  />
</div>
`;

exports[`Storyshots Layout/Box extra space 1`] = `
<div
  className="box css-1f766r3-style-style"
>
  <div
    className="content"
  />
</div>
`;

exports[`Storyshots Layout/Box no space 1`] = `
<div
  className="box css-3djmw7-style-style"
>
  <div
    className="content"
  />
</div>
`;

exports[`Storyshots Layout/Center default 1`] = `
<div
  className="box css-1n2b5dw-style-style"
>
  <div
    className="content"
  />
</div>
`;

exports[`Storyshots Layout/Center with text in a Stack 1`] = `
<div
  className=" css-1n2b5dw-style-style"
>
  <div
    className=" css-tst4s6-style-style"
  >
    <h3>
      Test
    </h3>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, corrupti aut. Natus, ducimus. Qui beatae, id quasi neque veniam sequi doloremque, officia voluptatibus expedita optio repudiandae quos ad! Aut, rerum.
    </p>
    <p
      className="font-size:small-1 font-family:sans-serif"
    >
      Footnote
    </p>
  </div>
</div>
`;

exports[`Storyshots Layout/Cluster default 1`] = `
<div
  aria-label={null}
  className="box css-b10j3i-style-style"
  data-container={null}
>
  <div>
    <div
      className="content horizontal"
    />
    <div
      aria-label={null}
      className=" css-lyias9-style-style"
      data-container={null}
    >
      <div>
        <div
          className="content horizontal"
        />
        <div
          className="content horizontal"
        />
        <div
          className="content horizontal"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/Cluster in a box 1`] = `
<div
  className="box css-2ax6e4-style-style"
>
  <div
    aria-label={null}
    className=" css-b10j3i-style-style"
    data-container={null}
  >
    <div>
      <div
        className="content horizontal"
      />
      <div
        aria-label={null}
        className=" css-lyias9-style-style"
        data-container={null}
      >
        <div>
          <div
            className="content horizontal"
          />
          <div
            className="content horizontal"
          />
          <div
            className="content horizontal"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/Cluster with links in a box 1`] = `
<div
  className="box css-2ax6e4-style-style"
>
  <div
    aria-label={null}
    className=" css-b10j3i-style-style"
    data-container={null}
  >
    <div>
      <svg
        aria-labelledby="nature-home-page-title"
        className=""
        focusable="false"
        height="2em"
        role="img"
        viewBox="0 0 200 49"
      >
        <title
          id="nature-home-page-title"
        >
          Nature
        </title>
        <g>
          <path
            d="M12.8 8.4l.1.1v8.4h.2c1.7-4.8 6-8.7 12.2-8.7 8.1 0 10.5 4 10.5 11.7v15.2c0 4.6.3 9.4 1.4 13h-13c1.1-3.4 1.2-7.6 1.2-12.6V21.1c0-3.5-1.4-5.2-5.3-5.2-3 0-5.2.8-6.9 2.3v17.4c0 5 .1 9.2 1.2 12.6H1.5c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.9-3.7"
          />
          <path
            d="M59.8 40.7V26.5c-.8 1.2-1.8 1.9-4.7 3.2-3.7 1.8-5 3.8-5 7.9 0 3.4 1.9 5.6 4.9 5.6 3 .1 4-1 4.8-2.5zM56.4 8.3c10.1 0 13.8 4 13.8 12.2v17.2c0 3.1 1.2 4 3.7 4 .4 0 1.7-.2 2.1-.6-.2 1.2-.4 1.8-.6 2.5-1.2 3.4-3.3 5.4-7.5 5.4-5 0-7.5-3.5-7.6-7.1h-.1c-1.7 5-4.9 7.1-10 7.1-6.3 0-10.3-3.8-10.3-9.7 0-6.2 5.6-8.9 11.5-11.2 5.6-2.2 8.6-3.8 8.6-7.8v-.8c0-4.4-1.4-6.6-5.5-6.6-2.6 0-3.5 1.2-4.1 3.7-.8 3.8-2.3 5.1-4.8 5.1-2.2 0-4.3-1.5-4.3-4.3-.2-5.4 7.3-9.1 15.1-9.1z"
          />
          <path
            d="M98.7 43.9C97.4 47 94.1 49 89.4 49c-8 0-11.1-4-11.1-11.4v-23h-3.8v-.3L88.4 0l.2.1v9.1h10l-1 5.5h-8.9V36c0 4.1 1.7 5.7 5.4 5.7 2.8 0 4.3-.4 5.6-1.1-.3 1.4-.5 2.2-1 3.3"
          />
          <path
            d="M113.1 8.9v27c0 4 1.6 6.3 5.5 6.3 3.3 0 5.8-1.1 7.2-3V20.9c0-4-.4-7.4-1.7-10.8l12-1.2v27.6c0 6.1.6 8.8 1.6 11.7H126v-7.8h-.1c-1.7 5-4.9 8.6-11.6 8.6-8.5 0-11.6-5.1-11.6-12.8V20.9c0-4-.4-7.4-1.7-10.8l12.1-1.2"
          />
          <path
            d="M152.5 18.3c1.7-7.2 5-10 9.4-10 4 0 6.1 2.1 6.1 5.4 0 3-1.7 5.4-4.8 5.4-1.8 0-2.9-.8-3.7-1.6-.9-.8-1.5-1.7-2.4-1.7-2.1 0-4.4 3.5-4.4 9.4V35c0 4.8.4 9.6 1.3 13.2h-13c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.8-3.7.1.1v9.8h.2"
          />
          <path
            d="M177.2 24l13.1-1.2c-.1-6.2-1.1-9.9-5.4-9.9-4.4.1-7 3.6-7.7 11.1zm7.8 25c-10 0-18.2-6.6-18.2-19.3 0-12.9 7.9-21.5 18.5-21.5 10.1 0 14.8 6.4 14.8 18.5h-22.9v1.2c0 9.7 5 13.6 11.9 13.6 6.2 0 9-2.5 10.8-4.3l.2.6C198.3 43.6 193.7 49 185 49z"
          />
        </g>
      </svg>
      <div
        aria-label={null}
        className=" css-12f438w-style-style"
        data-container={null}
      >
        <div>
          <p>
            Home page
          </p>
          <p>
            About
          </p>
          <p>
            Blog
          </p>
          <p>
            Index
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/Cluster with logo in a box 1`] = `
<div
  className="box css-2ax6e4-style-style"
>
  <div
    aria-label={null}
    className=" css-b10j3i-style-style"
    data-container={null}
  >
    <div>
      <svg
        aria-labelledby="nature-home-page-title"
        className=""
        focusable="false"
        height="2em"
        role="img"
        viewBox="0 0 200 49"
      >
        <title
          id="nature-home-page-title"
        >
          Nature
        </title>
        <g>
          <path
            d="M12.8 8.4l.1.1v8.4h.2c1.7-4.8 6-8.7 12.2-8.7 8.1 0 10.5 4 10.5 11.7v15.2c0 4.6.3 9.4 1.4 13h-13c1.1-3.4 1.2-7.6 1.2-12.6V21.1c0-3.5-1.4-5.2-5.3-5.2-3 0-5.2.8-6.9 2.3v17.4c0 5 .1 9.2 1.2 12.6H1.5c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.9-3.7"
          />
          <path
            d="M59.8 40.7V26.5c-.8 1.2-1.8 1.9-4.7 3.2-3.7 1.8-5 3.8-5 7.9 0 3.4 1.9 5.6 4.9 5.6 3 .1 4-1 4.8-2.5zM56.4 8.3c10.1 0 13.8 4 13.8 12.2v17.2c0 3.1 1.2 4 3.7 4 .4 0 1.7-.2 2.1-.6-.2 1.2-.4 1.8-.6 2.5-1.2 3.4-3.3 5.4-7.5 5.4-5 0-7.5-3.5-7.6-7.1h-.1c-1.7 5-4.9 7.1-10 7.1-6.3 0-10.3-3.8-10.3-9.7 0-6.2 5.6-8.9 11.5-11.2 5.6-2.2 8.6-3.8 8.6-7.8v-.8c0-4.4-1.4-6.6-5.5-6.6-2.6 0-3.5 1.2-4.1 3.7-.8 3.8-2.3 5.1-4.8 5.1-2.2 0-4.3-1.5-4.3-4.3-.2-5.4 7.3-9.1 15.1-9.1z"
          />
          <path
            d="M98.7 43.9C97.4 47 94.1 49 89.4 49c-8 0-11.1-4-11.1-11.4v-23h-3.8v-.3L88.4 0l.2.1v9.1h10l-1 5.5h-8.9V36c0 4.1 1.7 5.7 5.4 5.7 2.8 0 4.3-.4 5.6-1.1-.3 1.4-.5 2.2-1 3.3"
          />
          <path
            d="M113.1 8.9v27c0 4 1.6 6.3 5.5 6.3 3.3 0 5.8-1.1 7.2-3V20.9c0-4-.4-7.4-1.7-10.8l12-1.2v27.6c0 6.1.6 8.8 1.6 11.7H126v-7.8h-.1c-1.7 5-4.9 8.6-11.6 8.6-8.5 0-11.6-5.1-11.6-12.8V20.9c0-4-.4-7.4-1.7-10.8l12.1-1.2"
          />
          <path
            d="M152.5 18.3c1.7-7.2 5-10 9.4-10 4 0 6.1 2.1 6.1 5.4 0 3-1.7 5.4-4.8 5.4-1.8 0-2.9-.8-3.7-1.6-.9-.8-1.5-1.7-2.4-1.7-2.1 0-4.4 3.5-4.4 9.4V35c0 4.8.4 9.6 1.3 13.2h-13c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.8-3.7.1.1v9.8h.2"
          />
          <path
            d="M177.2 24l13.1-1.2c-.1-6.2-1.1-9.9-5.4-9.9-4.4.1-7 3.6-7.7 11.1zm7.8 25c-10 0-18.2-6.6-18.2-19.3 0-12.9 7.9-21.5 18.5-21.5 10.1 0 14.8 6.4 14.8 18.5h-22.9v1.2c0 9.7 5 13.6 11.9 13.6 6.2 0 9-2.5 10.8-4.3l.2.6C198.3 43.6 193.7 49 185 49z"
          />
        </g>
      </svg>
      <div
        aria-label={null}
        className=" css-lyias9-style-style"
        data-container={null}
      >
        <div>
          <div
            className="content horizontal"
          />
          <div
            className="content horizontal"
          />
          <div
            className="content horizontal"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/Cluster with social icons in a box 1`] = `
<div
  className="box css-2ax6e4-style-style"
>
  <div
    aria-label={null}
    className=" css-rlgjrn-style-style"
    data-container={null}
  >
    <div>
      <div
        className="logo"
      >
        <svg
          aria-labelledby="nature-home-page-title"
          className=""
          focusable="false"
          height="2em"
          role="img"
          viewBox="0 0 200 49"
        >
          <title
            id="nature-home-page-title"
          >
            Nature
          </title>
          <g>
            <path
              d="M12.8 8.4l.1.1v8.4h.2c1.7-4.8 6-8.7 12.2-8.7 8.1 0 10.5 4 10.5 11.7v15.2c0 4.6.3 9.4 1.4 13h-13c1.1-3.4 1.2-7.6 1.2-12.6V21.1c0-3.5-1.4-5.2-5.3-5.2-3 0-5.2.8-6.9 2.3v17.4c0 5 .1 9.2 1.2 12.6H1.5c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.9-3.7"
            />
            <path
              d="M59.8 40.7V26.5c-.8 1.2-1.8 1.9-4.7 3.2-3.7 1.8-5 3.8-5 7.9 0 3.4 1.9 5.6 4.9 5.6 3 .1 4-1 4.8-2.5zM56.4 8.3c10.1 0 13.8 4 13.8 12.2v17.2c0 3.1 1.2 4 3.7 4 .4 0 1.7-.2 2.1-.6-.2 1.2-.4 1.8-.6 2.5-1.2 3.4-3.3 5.4-7.5 5.4-5 0-7.5-3.5-7.6-7.1h-.1c-1.7 5-4.9 7.1-10 7.1-6.3 0-10.3-3.8-10.3-9.7 0-6.2 5.6-8.9 11.5-11.2 5.6-2.2 8.6-3.8 8.6-7.8v-.8c0-4.4-1.4-6.6-5.5-6.6-2.6 0-3.5 1.2-4.1 3.7-.8 3.8-2.3 5.1-4.8 5.1-2.2 0-4.3-1.5-4.3-4.3-.2-5.4 7.3-9.1 15.1-9.1z"
            />
            <path
              d="M98.7 43.9C97.4 47 94.1 49 89.4 49c-8 0-11.1-4-11.1-11.4v-23h-3.8v-.3L88.4 0l.2.1v9.1h10l-1 5.5h-8.9V36c0 4.1 1.7 5.7 5.4 5.7 2.8 0 4.3-.4 5.6-1.1-.3 1.4-.5 2.2-1 3.3"
            />
            <path
              d="M113.1 8.9v27c0 4 1.6 6.3 5.5 6.3 3.3 0 5.8-1.1 7.2-3V20.9c0-4-.4-7.4-1.7-10.8l12-1.2v27.6c0 6.1.6 8.8 1.6 11.7H126v-7.8h-.1c-1.7 5-4.9 8.6-11.6 8.6-8.5 0-11.6-5.1-11.6-12.8V20.9c0-4-.4-7.4-1.7-10.8l12.1-1.2"
            />
            <path
              d="M152.5 18.3c1.7-7.2 5-10 9.4-10 4 0 6.1 2.1 6.1 5.4 0 3-1.7 5.4-4.8 5.4-1.8 0-2.9-.8-3.7-1.6-.9-.8-1.5-1.7-2.4-1.7-2.1 0-4.4 3.5-4.4 9.4V35c0 4.8.4 9.6 1.3 13.2h-13c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.8-3.7.1.1v9.8h.2"
            />
            <path
              d="M177.2 24l13.1-1.2c-.1-6.2-1.1-9.9-5.4-9.9-4.4.1-7 3.6-7.7 11.1zm7.8 25c-10 0-18.2-6.6-18.2-19.3 0-12.9 7.9-21.5 18.5-21.5 10.1 0 14.8 6.4 14.8 18.5h-22.9v1.2c0 9.7 5 13.6 11.9 13.6 6.2 0 9-2.5 10.8-4.3l.2.6C198.3 43.6 193.7 49 185 49z"
            />
          </g>
        </svg>
      </div>
      <div
        aria-label={null}
        className=" css-b10j3i-style-style"
        data-container={null}
      >
        <div>
          <p>
            Home page
          </p>
          <p>
            About
          </p>
          <p>
            Blog
          </p>
          <p>
            Index
          </p>
        </div>
      </div>
      <div
        aria-label={null}
        className=" css-b10j3i-style-style"
        data-container={null}
      >
        <div>
          <svg
            aria-hidden="true"
            aria-labelledby="email-title"
            focusable="false"
            height="2em"
            role="img"
            viewBox="0 0 30 30"
          >
            <title
              id="email-title"
            >
              Share by email
            </title>
            <path
              d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
            />
            <path
              d="M15,15.3269887 L10.6248577,11.9177869 C10.4236021,11.7609644 10.1299323,11.7927468 9.96892789,11.988775 C9.80792343,12.1848031 9.84055341,12.4708451 10.041809,12.6276676 L14.7012493,16.2584003 C14.8680779,16.3940555 15.1152493,16.4013884 15.2915244,16.2640313 C15.2939898,16.2622325 15.2963784,16.2603294 15.2987507,16.2584003 L19.958191,12.6276676 C20.1594466,12.4708451 20.1920766,12.1848031 20.0310721,11.988775 C19.8700677,11.7927468 19.5763979,11.7609644 19.3751423,11.9177869 L15,15.3269887 Z M9,10 L21,10 C21.5522847,10 22,10.4477153 22,11 L22,19 C22,19.5522847 21.5522847,20 21,20 L9,20 C8.44771525,20 8,19.5522847 8,19 L8,11 C8,10.4477153 8.44771525,10 9,10 Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            aria-labelledby="facebook-title"
            focusable="false"
            height="2em"
            role="img"
            viewBox="0 0 30 30"
          >
            <title
              id="facebook-title"
            >
              Share on Facebook
            </title>
            <path
              d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
            />
            <path
              d="M15.89625,22.8625 L12.57125,22.8625 L12.57125,15.02125 L10.90875,15.02125 L10.90875,12.31875 L12.57125,12.31875 L12.57125,10.69625 C12.57125,8.4925 13.50875,7.18 16.175,7.18 L18.39375,7.18 L18.39375,9.8825 L17.00625,9.8825 C15.96875,9.8825 15.9,10.26 15.9,10.965 L15.895,12.3175 L18.4075,12.3175 L18.115,15.02 L15.89625,15.02 L15.89625,22.8625 Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            aria-labelledby="twitter-title"
            focusable="false"
            height="2em"
            role="img"
            viewBox="0 0 30 30"
          >
            <title
              id="twitter-title"
            >
              Share on Twitter
            </title>
            <path
              d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
            />
            <path
              d="M20.8125,11.4875 C21.42,11.10375 21.8875,10.49625 22.105,9.7725 C21.5375,10.1275 20.90875,10.385 20.23875,10.5225 C19.70625,9.9225 18.9425,9.545 18.0975,9.545 C16.475,9.545 15.16,10.9325 15.16,12.6425 C15.16,12.885 15.185,13.1225 15.235,13.3475 C12.7975,13.2175 10.63125,11.985 9.1825,10.11 C8.93,10.56875 8.785,11.10125 8.785,11.66875 C8.785,12.74375 9.30375,13.69125 10.09125,14.2475 C9.61125,14.23125 9.1575,14.09 8.76125,13.86 L8.76125,13.8975 C8.76125,15.3975 9.77375,16.65125 11.11875,16.935 C10.87125,17.0075 10.6125,17.04375 10.34375,17.04375 C10.15625,17.04375 9.96875,17.025 9.79125,16.98875 C10.16625,18.22125 11.24875,19.11875 12.535,19.1425 C11.52875,19.97375 10.2625,20.4675 8.885,20.4675 C8.6475,20.4675 8.415,20.455 8.185,20.42625 C9.485,21.30375 11.02875,21.81625 12.6875,21.81625 C18.09,21.81625 21.04375,17.095 21.04375,13.00125 L21.03625,12.60125 C21.61125,12.16375 22.11125,11.6175 22.50125,10.99625 C21.97375,11.2425 21.4075,11.40875 20.81375,11.48375 L20.8125,11.4875 Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/Grid default 1`] = `
<div
  className="box css-1ws573r-style-style"
>
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
</div>
`;

exports[`Storyshots Layout/Grid minWidth 100px 1`] = `
<div
  className="box css-ixs3dq-style-style"
>
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
</div>
`;

exports[`Storyshots Layout/Grid text in boxes with surrounding Box 1`] = `
<div
  className=" css-2ax6e4-style-style"
>
  <div
    className=" css-1ws573r-style-style"
  >
    <div
      className="invert css-2ax6e4-style-style"
    >
      <div
        className=" css-tst4s6-style-style"
      >
        <h3>
          Test
        </h3>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, corrupti aut. Natus, ducimus. Qui beatae, id quasi neque veniam sequi doloremque, officia voluptatibus expedita optio repudiandae quos ad! Aut, rerum.
        </p>
        <p
          className="font-size:small-1 font-family:sans-serif"
        >
          Footnote
        </p>
      </div>
    </div>
    <div
      className=" css-2ax6e4-style-style"
    >
      <div
        className=" css-tst4s6-style-style"
      >
        <h3>
          Test
        </h3>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, corrupti aut. Natus, ducimus. Qui beatae, id quasi neque veniam sequi doloremque, officia voluptatibus expedita optio repudiandae quos ad! Aut, rerum.
        </p>
        <p
          className="font-size:small-1 font-family:sans-serif"
        >
          Footnote
        </p>
      </div>
    </div>
    <div
      className=" css-2ax6e4-style-style"
    >
      <div
        className=" css-tst4s6-style-style"
      >
        <h3>
          Test
        </h3>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, corrupti aut. Natus, ducimus. Qui beatae, id quasi neque veniam sequi doloremque, officia voluptatibus expedita optio repudiandae quos ad! Aut, rerum.
        </p>
        <p
          className="font-size:small-1 font-family:sans-serif"
        >
          Footnote
        </p>
      </div>
    </div>
    <div
      className=" css-2ax6e4-style-style"
    >
      <div
        className=" css-tst4s6-style-style"
      >
        <h3>
          Test
        </h3>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, corrupti aut. Natus, ducimus. Qui beatae, id quasi neque veniam sequi doloremque, officia voluptatibus expedita optio repudiandae quos ad! Aut, rerum.
        </p>
        <p
          className="font-size:small-1 font-family:sans-serif"
        >
          Footnote
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/Grid text with extra space with surrounding Box 1`] = `
<div
  className=" css-18mi9nm-style-style"
>
  <div
    className=" css-y1nrsq-style-style"
  >
    <div
      className=" css-tst4s6-style-style"
    >
      <h3>
        Test
      </h3>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, corrupti aut. Natus, ducimus. Qui beatae, id quasi neque veniam sequi doloremque, officia voluptatibus expedita optio repudiandae quos ad! Aut, rerum.
      </p>
      <p
        className="font-size:small-1 font-family:sans-serif"
      >
        Footnote
      </p>
    </div>
    <div
      className=" css-tst4s6-style-style"
    >
      <h3>
        Test
      </h3>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, corrupti aut. Natus, ducimus. Qui beatae, id quasi neque veniam sequi doloremque, officia voluptatibus expedita optio repudiandae quos ad! Aut, rerum.
      </p>
      <p
        className="font-size:small-1 font-family:sans-serif"
      >
        Footnote
      </p>
    </div>
    <div
      className=" css-tst4s6-style-style"
    >
      <h3>
        Test
      </h3>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, corrupti aut. Natus, ducimus. Qui beatae, id quasi neque veniam sequi doloremque, officia voluptatibus expedita optio repudiandae quos ad! Aut, rerum.
      </p>
      <p
        className="font-size:small-1 font-family:sans-serif"
      >
        Footnote
      </p>
    </div>
    <div
      className=" css-tst4s6-style-style"
    >
      <h3>
        Test
      </h3>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, corrupti aut. Natus, ducimus. Qui beatae, id quasi neque veniam sequi doloremque, officia voluptatibus expedita optio repudiandae quos ad! Aut, rerum.
      </p>
      <p
        className="font-size:small-1 font-family:sans-serif"
      >
        Footnote
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/Grid with extra space 1`] = `
<div
  className="box css-18mi9nm-style-style"
>
  <div
    className=" css-y1nrsq-style-style"
  >
    <div
      className="content"
    />
    <div
      className="content"
    />
    <div
      className="content"
    />
    <div
      className="content"
    />
    <div
      className="content"
    />
    <div
      className="content"
    />
    <div
      className="content"
    />
  </div>
</div>
`;

exports[`Storyshots Layout/Stack default 1`] = `
<div
  className="box css-tst4s6-style-style"
>
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
  <div
    className="content"
  />
</div>
`;

exports[`Storyshots Layout/Stack text 1`] = `
<div
  className=" css-tst4s6-style-style"
>
  <h3>
    Test
  </h3>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, corrupti aut. Natus, ducimus. Qui beatae, id quasi neque veniam sequi doloremque, officia voluptatibus expedita optio repudiandae quos ad! Aut, rerum.
  </p>
  <p
    className="font-size:small-1 font-family:sans-serif"
  >
    Footnote
  </p>
</div>
`;

exports[`Storyshots Layout/Stack text in a box 1`] = `
<div
  className=" css-2ax6e4-style-style"
>
  <div
    className=" css-tst4s6-style-style"
  >
    <h3>
      Test
    </h3>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, corrupti aut. Natus, ducimus. Qui beatae, id quasi neque veniam sequi doloremque, officia voluptatibus expedita optio repudiandae quos ad! Aut, rerum.
    </p>
    <p
      className="font-size:small-1 font-family:sans-serif"
    >
      Footnote
    </p>
  </div>
</div>
`;

exports[`Storyshots Layout/Stack text in a box invert 1`] = `
<div
  className="invert css-2ax6e4-style-style"
>
  <div
    className=" css-tst4s6-style-style"
  >
    <h3>
      Test
    </h3>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, corrupti aut. Natus, ducimus. Qui beatae, id quasi neque veniam sequi doloremque, officia voluptatibus expedita optio repudiandae quos ad! Aut, rerum.
    </p>
    <p
      className="font-size:small-1 font-family:sans-serif"
    >
      Footnote
    </p>
  </div>
</div>
`;

exports[`Storyshots LogosSVG EmailLogoSVG 1`] = `
<div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "svg { border: 1px solid red;}",
      }
    }
  />
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="email-title"
      focusable="false"
      height="1.5em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="email-title"
      >
        Share by email
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M15,15.3269887 L10.6248577,11.9177869 C10.4236021,11.7609644 10.1299323,11.7927468 9.96892789,11.988775 C9.80792343,12.1848031 9.84055341,12.4708451 10.041809,12.6276676 L14.7012493,16.2584003 C14.8680779,16.3940555 15.1152493,16.4013884 15.2915244,16.2640313 C15.2939898,16.2622325 15.2963784,16.2603294 15.2987507,16.2584003 L19.958191,12.6276676 C20.1594466,12.4708451 20.1920766,12.1848031 20.0310721,11.988775 C19.8700677,11.7927468 19.5763979,11.7609644 19.3751423,11.9177869 L15,15.3269887 Z M9,10 L21,10 C21.5522847,10 22,10.4477153 22,11 L22,19 C22,19.5522847 21.5522847,20 21,20 L9,20 C8.44771525,20 8,19.5522847 8,19 L8,11 C8,10.4477153 8.44771525,10 9,10 Z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="email-title"
      focusable="false"
      height="3em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="email-title"
      >
        Share by email
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M15,15.3269887 L10.6248577,11.9177869 C10.4236021,11.7609644 10.1299323,11.7927468 9.96892789,11.988775 C9.80792343,12.1848031 9.84055341,12.4708451 10.041809,12.6276676 L14.7012493,16.2584003 C14.8680779,16.3940555 15.1152493,16.4013884 15.2915244,16.2640313 C15.2939898,16.2622325 15.2963784,16.2603294 15.2987507,16.2584003 L19.958191,12.6276676 C20.1594466,12.4708451 20.1920766,12.1848031 20.0310721,11.988775 C19.8700677,11.7927468 19.5763979,11.7609644 19.3751423,11.9177869 L15,15.3269887 Z M9,10 L21,10 C21.5522847,10 22,10.4477153 22,11 L22,19 C22,19.5522847 21.5522847,20 21,20 L9,20 C8.44771525,20 8,19.5522847 8,19 L8,11 C8,10.4477153 8.44771525,10 9,10 Z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="email-title"
      focusable="false"
      height="4.5em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="email-title"
      >
        Share by email
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M15,15.3269887 L10.6248577,11.9177869 C10.4236021,11.7609644 10.1299323,11.7927468 9.96892789,11.988775 C9.80792343,12.1848031 9.84055341,12.4708451 10.041809,12.6276676 L14.7012493,16.2584003 C14.8680779,16.3940555 15.1152493,16.4013884 15.2915244,16.2640313 C15.2939898,16.2622325 15.2963784,16.2603294 15.2987507,16.2584003 L19.958191,12.6276676 C20.1594466,12.4708451 20.1920766,12.1848031 20.0310721,11.988775 C19.8700677,11.7927468 19.5763979,11.7609644 19.3751423,11.9177869 L15,15.3269887 Z M9,10 L21,10 C21.5522847,10 22,10.4477153 22,11 L22,19 C22,19.5522847 21.5522847,20 21,20 L9,20 C8.44771525,20 8,19.5522847 8,19 L8,11 C8,10.4477153 8.44771525,10 9,10 Z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="email-title"
      focusable="false"
      height="6em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="email-title"
      >
        Share by email
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M15,15.3269887 L10.6248577,11.9177869 C10.4236021,11.7609644 10.1299323,11.7927468 9.96892789,11.988775 C9.80792343,12.1848031 9.84055341,12.4708451 10.041809,12.6276676 L14.7012493,16.2584003 C14.8680779,16.3940555 15.1152493,16.4013884 15.2915244,16.2640313 C15.2939898,16.2622325 15.2963784,16.2603294 15.2987507,16.2584003 L19.958191,12.6276676 C20.1594466,12.4708451 20.1920766,12.1848031 20.0310721,11.988775 C19.8700677,11.7927468 19.5763979,11.7609644 19.3751423,11.9177869 L15,15.3269887 Z M9,10 L21,10 C21.5522847,10 22,10.4477153 22,11 L22,19 C22,19.5522847 21.5522847,20 21,20 L9,20 C8.44771525,20 8,19.5522847 8,19 L8,11 C8,10.4477153 8.44771525,10 9,10 Z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="email-title"
      focusable="false"
      height="7.5em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="email-title"
      >
        Share by email
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M15,15.3269887 L10.6248577,11.9177869 C10.4236021,11.7609644 10.1299323,11.7927468 9.96892789,11.988775 C9.80792343,12.1848031 9.84055341,12.4708451 10.041809,12.6276676 L14.7012493,16.2584003 C14.8680779,16.3940555 15.1152493,16.4013884 15.2915244,16.2640313 C15.2939898,16.2622325 15.2963784,16.2603294 15.2987507,16.2584003 L19.958191,12.6276676 C20.1594466,12.4708451 20.1920766,12.1848031 20.0310721,11.988775 C19.8700677,11.7927468 19.5763979,11.7609644 19.3751423,11.9177869 L15,15.3269887 Z M9,10 L21,10 C21.5522847,10 22,10.4477153 22,11 L22,19 C22,19.5522847 21.5522847,20 21,20 L9,20 C8.44771525,20 8,19.5522847 8,19 L8,11 C8,10.4477153 8.44771525,10 9,10 Z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots LogosSVG FacebookLogoSVG 1`] = `
<div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "svg { border: 1px solid red;}",
      }
    }
  />
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="facebook-title"
      focusable="false"
      height="1.5em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="facebook-title"
      >
        Share on Facebook
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M15.89625,22.8625 L12.57125,22.8625 L12.57125,15.02125 L10.90875,15.02125 L10.90875,12.31875 L12.57125,12.31875 L12.57125,10.69625 C12.57125,8.4925 13.50875,7.18 16.175,7.18 L18.39375,7.18 L18.39375,9.8825 L17.00625,9.8825 C15.96875,9.8825 15.9,10.26 15.9,10.965 L15.895,12.3175 L18.4075,12.3175 L18.115,15.02 L15.89625,15.02 L15.89625,22.8625 Z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="facebook-title"
      focusable="false"
      height="3em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="facebook-title"
      >
        Share on Facebook
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M15.89625,22.8625 L12.57125,22.8625 L12.57125,15.02125 L10.90875,15.02125 L10.90875,12.31875 L12.57125,12.31875 L12.57125,10.69625 C12.57125,8.4925 13.50875,7.18 16.175,7.18 L18.39375,7.18 L18.39375,9.8825 L17.00625,9.8825 C15.96875,9.8825 15.9,10.26 15.9,10.965 L15.895,12.3175 L18.4075,12.3175 L18.115,15.02 L15.89625,15.02 L15.89625,22.8625 Z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="facebook-title"
      focusable="false"
      height="4.5em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="facebook-title"
      >
        Share on Facebook
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M15.89625,22.8625 L12.57125,22.8625 L12.57125,15.02125 L10.90875,15.02125 L10.90875,12.31875 L12.57125,12.31875 L12.57125,10.69625 C12.57125,8.4925 13.50875,7.18 16.175,7.18 L18.39375,7.18 L18.39375,9.8825 L17.00625,9.8825 C15.96875,9.8825 15.9,10.26 15.9,10.965 L15.895,12.3175 L18.4075,12.3175 L18.115,15.02 L15.89625,15.02 L15.89625,22.8625 Z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="facebook-title"
      focusable="false"
      height="6em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="facebook-title"
      >
        Share on Facebook
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M15.89625,22.8625 L12.57125,22.8625 L12.57125,15.02125 L10.90875,15.02125 L10.90875,12.31875 L12.57125,12.31875 L12.57125,10.69625 C12.57125,8.4925 13.50875,7.18 16.175,7.18 L18.39375,7.18 L18.39375,9.8825 L17.00625,9.8825 C15.96875,9.8825 15.9,10.26 15.9,10.965 L15.895,12.3175 L18.4075,12.3175 L18.115,15.02 L15.89625,15.02 L15.89625,22.8625 Z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="facebook-title"
      focusable="false"
      height="7.5em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="facebook-title"
      >
        Share on Facebook
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M15.89625,22.8625 L12.57125,22.8625 L12.57125,15.02125 L10.90875,15.02125 L10.90875,12.31875 L12.57125,12.31875 L12.57125,10.69625 C12.57125,8.4925 13.50875,7.18 16.175,7.18 L18.39375,7.18 L18.39375,9.8825 L17.00625,9.8825 C15.96875,9.8825 15.9,10.26 15.9,10.965 L15.895,12.3175 L18.4075,12.3175 L18.115,15.02 L15.89625,15.02 L15.89625,22.8625 Z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots LogosSVG NatureLogoSVG 1`] = `
<div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "svg { border: 1px solid red;}",
      }
    }
  />
  <div>
    <svg
      aria-labelledby="nature-home-page-title"
      className=""
      focusable="false"
      height="1.5em"
      role="img"
      viewBox="0 0 200 49"
    >
      <title
        id="nature-home-page-title"
      >
        Nature
      </title>
      <g>
        <path
          d="M12.8 8.4l.1.1v8.4h.2c1.7-4.8 6-8.7 12.2-8.7 8.1 0 10.5 4 10.5 11.7v15.2c0 4.6.3 9.4 1.4 13h-13c1.1-3.4 1.2-7.6 1.2-12.6V21.1c0-3.5-1.4-5.2-5.3-5.2-3 0-5.2.8-6.9 2.3v17.4c0 5 .1 9.2 1.2 12.6H1.5c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.9-3.7"
        />
        <path
          d="M59.8 40.7V26.5c-.8 1.2-1.8 1.9-4.7 3.2-3.7 1.8-5 3.8-5 7.9 0 3.4 1.9 5.6 4.9 5.6 3 .1 4-1 4.8-2.5zM56.4 8.3c10.1 0 13.8 4 13.8 12.2v17.2c0 3.1 1.2 4 3.7 4 .4 0 1.7-.2 2.1-.6-.2 1.2-.4 1.8-.6 2.5-1.2 3.4-3.3 5.4-7.5 5.4-5 0-7.5-3.5-7.6-7.1h-.1c-1.7 5-4.9 7.1-10 7.1-6.3 0-10.3-3.8-10.3-9.7 0-6.2 5.6-8.9 11.5-11.2 5.6-2.2 8.6-3.8 8.6-7.8v-.8c0-4.4-1.4-6.6-5.5-6.6-2.6 0-3.5 1.2-4.1 3.7-.8 3.8-2.3 5.1-4.8 5.1-2.2 0-4.3-1.5-4.3-4.3-.2-5.4 7.3-9.1 15.1-9.1z"
        />
        <path
          d="M98.7 43.9C97.4 47 94.1 49 89.4 49c-8 0-11.1-4-11.1-11.4v-23h-3.8v-.3L88.4 0l.2.1v9.1h10l-1 5.5h-8.9V36c0 4.1 1.7 5.7 5.4 5.7 2.8 0 4.3-.4 5.6-1.1-.3 1.4-.5 2.2-1 3.3"
        />
        <path
          d="M113.1 8.9v27c0 4 1.6 6.3 5.5 6.3 3.3 0 5.8-1.1 7.2-3V20.9c0-4-.4-7.4-1.7-10.8l12-1.2v27.6c0 6.1.6 8.8 1.6 11.7H126v-7.8h-.1c-1.7 5-4.9 8.6-11.6 8.6-8.5 0-11.6-5.1-11.6-12.8V20.9c0-4-.4-7.4-1.7-10.8l12.1-1.2"
        />
        <path
          d="M152.5 18.3c1.7-7.2 5-10 9.4-10 4 0 6.1 2.1 6.1 5.4 0 3-1.7 5.4-4.8 5.4-1.8 0-2.9-.8-3.7-1.6-.9-.8-1.5-1.7-2.4-1.7-2.1 0-4.4 3.5-4.4 9.4V35c0 4.8.4 9.6 1.3 13.2h-13c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.8-3.7.1.1v9.8h.2"
        />
        <path
          d="M177.2 24l13.1-1.2c-.1-6.2-1.1-9.9-5.4-9.9-4.4.1-7 3.6-7.7 11.1zm7.8 25c-10 0-18.2-6.6-18.2-19.3 0-12.9 7.9-21.5 18.5-21.5 10.1 0 14.8 6.4 14.8 18.5h-22.9v1.2c0 9.7 5 13.6 11.9 13.6 6.2 0 9-2.5 10.8-4.3l.2.6C198.3 43.6 193.7 49 185 49z"
        />
      </g>
    </svg>
  </div>
  <div>
    <svg
      aria-labelledby="nature-home-page-title"
      className=""
      focusable="false"
      height="3em"
      role="img"
      viewBox="0 0 200 49"
    >
      <title
        id="nature-home-page-title"
      >
        Nature
      </title>
      <g>
        <path
          d="M12.8 8.4l.1.1v8.4h.2c1.7-4.8 6-8.7 12.2-8.7 8.1 0 10.5 4 10.5 11.7v15.2c0 4.6.3 9.4 1.4 13h-13c1.1-3.4 1.2-7.6 1.2-12.6V21.1c0-3.5-1.4-5.2-5.3-5.2-3 0-5.2.8-6.9 2.3v17.4c0 5 .1 9.2 1.2 12.6H1.5c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.9-3.7"
        />
        <path
          d="M59.8 40.7V26.5c-.8 1.2-1.8 1.9-4.7 3.2-3.7 1.8-5 3.8-5 7.9 0 3.4 1.9 5.6 4.9 5.6 3 .1 4-1 4.8-2.5zM56.4 8.3c10.1 0 13.8 4 13.8 12.2v17.2c0 3.1 1.2 4 3.7 4 .4 0 1.7-.2 2.1-.6-.2 1.2-.4 1.8-.6 2.5-1.2 3.4-3.3 5.4-7.5 5.4-5 0-7.5-3.5-7.6-7.1h-.1c-1.7 5-4.9 7.1-10 7.1-6.3 0-10.3-3.8-10.3-9.7 0-6.2 5.6-8.9 11.5-11.2 5.6-2.2 8.6-3.8 8.6-7.8v-.8c0-4.4-1.4-6.6-5.5-6.6-2.6 0-3.5 1.2-4.1 3.7-.8 3.8-2.3 5.1-4.8 5.1-2.2 0-4.3-1.5-4.3-4.3-.2-5.4 7.3-9.1 15.1-9.1z"
        />
        <path
          d="M98.7 43.9C97.4 47 94.1 49 89.4 49c-8 0-11.1-4-11.1-11.4v-23h-3.8v-.3L88.4 0l.2.1v9.1h10l-1 5.5h-8.9V36c0 4.1 1.7 5.7 5.4 5.7 2.8 0 4.3-.4 5.6-1.1-.3 1.4-.5 2.2-1 3.3"
        />
        <path
          d="M113.1 8.9v27c0 4 1.6 6.3 5.5 6.3 3.3 0 5.8-1.1 7.2-3V20.9c0-4-.4-7.4-1.7-10.8l12-1.2v27.6c0 6.1.6 8.8 1.6 11.7H126v-7.8h-.1c-1.7 5-4.9 8.6-11.6 8.6-8.5 0-11.6-5.1-11.6-12.8V20.9c0-4-.4-7.4-1.7-10.8l12.1-1.2"
        />
        <path
          d="M152.5 18.3c1.7-7.2 5-10 9.4-10 4 0 6.1 2.1 6.1 5.4 0 3-1.7 5.4-4.8 5.4-1.8 0-2.9-.8-3.7-1.6-.9-.8-1.5-1.7-2.4-1.7-2.1 0-4.4 3.5-4.4 9.4V35c0 4.8.4 9.6 1.3 13.2h-13c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.8-3.7.1.1v9.8h.2"
        />
        <path
          d="M177.2 24l13.1-1.2c-.1-6.2-1.1-9.9-5.4-9.9-4.4.1-7 3.6-7.7 11.1zm7.8 25c-10 0-18.2-6.6-18.2-19.3 0-12.9 7.9-21.5 18.5-21.5 10.1 0 14.8 6.4 14.8 18.5h-22.9v1.2c0 9.7 5 13.6 11.9 13.6 6.2 0 9-2.5 10.8-4.3l.2.6C198.3 43.6 193.7 49 185 49z"
        />
      </g>
    </svg>
  </div>
  <div>
    <svg
      aria-labelledby="nature-home-page-title"
      className=""
      focusable="false"
      height="4.5em"
      role="img"
      viewBox="0 0 200 49"
    >
      <title
        id="nature-home-page-title"
      >
        Nature
      </title>
      <g>
        <path
          d="M12.8 8.4l.1.1v8.4h.2c1.7-4.8 6-8.7 12.2-8.7 8.1 0 10.5 4 10.5 11.7v15.2c0 4.6.3 9.4 1.4 13h-13c1.1-3.4 1.2-7.6 1.2-12.6V21.1c0-3.5-1.4-5.2-5.3-5.2-3 0-5.2.8-6.9 2.3v17.4c0 5 .1 9.2 1.2 12.6H1.5c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.9-3.7"
        />
        <path
          d="M59.8 40.7V26.5c-.8 1.2-1.8 1.9-4.7 3.2-3.7 1.8-5 3.8-5 7.9 0 3.4 1.9 5.6 4.9 5.6 3 .1 4-1 4.8-2.5zM56.4 8.3c10.1 0 13.8 4 13.8 12.2v17.2c0 3.1 1.2 4 3.7 4 .4 0 1.7-.2 2.1-.6-.2 1.2-.4 1.8-.6 2.5-1.2 3.4-3.3 5.4-7.5 5.4-5 0-7.5-3.5-7.6-7.1h-.1c-1.7 5-4.9 7.1-10 7.1-6.3 0-10.3-3.8-10.3-9.7 0-6.2 5.6-8.9 11.5-11.2 5.6-2.2 8.6-3.8 8.6-7.8v-.8c0-4.4-1.4-6.6-5.5-6.6-2.6 0-3.5 1.2-4.1 3.7-.8 3.8-2.3 5.1-4.8 5.1-2.2 0-4.3-1.5-4.3-4.3-.2-5.4 7.3-9.1 15.1-9.1z"
        />
        <path
          d="M98.7 43.9C97.4 47 94.1 49 89.4 49c-8 0-11.1-4-11.1-11.4v-23h-3.8v-.3L88.4 0l.2.1v9.1h10l-1 5.5h-8.9V36c0 4.1 1.7 5.7 5.4 5.7 2.8 0 4.3-.4 5.6-1.1-.3 1.4-.5 2.2-1 3.3"
        />
        <path
          d="M113.1 8.9v27c0 4 1.6 6.3 5.5 6.3 3.3 0 5.8-1.1 7.2-3V20.9c0-4-.4-7.4-1.7-10.8l12-1.2v27.6c0 6.1.6 8.8 1.6 11.7H126v-7.8h-.1c-1.7 5-4.9 8.6-11.6 8.6-8.5 0-11.6-5.1-11.6-12.8V20.9c0-4-.4-7.4-1.7-10.8l12.1-1.2"
        />
        <path
          d="M152.5 18.3c1.7-7.2 5-10 9.4-10 4 0 6.1 2.1 6.1 5.4 0 3-1.7 5.4-4.8 5.4-1.8 0-2.9-.8-3.7-1.6-.9-.8-1.5-1.7-2.4-1.7-2.1 0-4.4 3.5-4.4 9.4V35c0 4.8.4 9.6 1.3 13.2h-13c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.8-3.7.1.1v9.8h.2"
        />
        <path
          d="M177.2 24l13.1-1.2c-.1-6.2-1.1-9.9-5.4-9.9-4.4.1-7 3.6-7.7 11.1zm7.8 25c-10 0-18.2-6.6-18.2-19.3 0-12.9 7.9-21.5 18.5-21.5 10.1 0 14.8 6.4 14.8 18.5h-22.9v1.2c0 9.7 5 13.6 11.9 13.6 6.2 0 9-2.5 10.8-4.3l.2.6C198.3 43.6 193.7 49 185 49z"
        />
      </g>
    </svg>
  </div>
  <div>
    <svg
      aria-labelledby="nature-home-page-title"
      className=""
      focusable="false"
      height="6em"
      role="img"
      viewBox="0 0 200 49"
    >
      <title
        id="nature-home-page-title"
      >
        Nature
      </title>
      <g>
        <path
          d="M12.8 8.4l.1.1v8.4h.2c1.7-4.8 6-8.7 12.2-8.7 8.1 0 10.5 4 10.5 11.7v15.2c0 4.6.3 9.4 1.4 13h-13c1.1-3.4 1.2-7.6 1.2-12.6V21.1c0-3.5-1.4-5.2-5.3-5.2-3 0-5.2.8-6.9 2.3v17.4c0 5 .1 9.2 1.2 12.6H1.5c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.9-3.7"
        />
        <path
          d="M59.8 40.7V26.5c-.8 1.2-1.8 1.9-4.7 3.2-3.7 1.8-5 3.8-5 7.9 0 3.4 1.9 5.6 4.9 5.6 3 .1 4-1 4.8-2.5zM56.4 8.3c10.1 0 13.8 4 13.8 12.2v17.2c0 3.1 1.2 4 3.7 4 .4 0 1.7-.2 2.1-.6-.2 1.2-.4 1.8-.6 2.5-1.2 3.4-3.3 5.4-7.5 5.4-5 0-7.5-3.5-7.6-7.1h-.1c-1.7 5-4.9 7.1-10 7.1-6.3 0-10.3-3.8-10.3-9.7 0-6.2 5.6-8.9 11.5-11.2 5.6-2.2 8.6-3.8 8.6-7.8v-.8c0-4.4-1.4-6.6-5.5-6.6-2.6 0-3.5 1.2-4.1 3.7-.8 3.8-2.3 5.1-4.8 5.1-2.2 0-4.3-1.5-4.3-4.3-.2-5.4 7.3-9.1 15.1-9.1z"
        />
        <path
          d="M98.7 43.9C97.4 47 94.1 49 89.4 49c-8 0-11.1-4-11.1-11.4v-23h-3.8v-.3L88.4 0l.2.1v9.1h10l-1 5.5h-8.9V36c0 4.1 1.7 5.7 5.4 5.7 2.8 0 4.3-.4 5.6-1.1-.3 1.4-.5 2.2-1 3.3"
        />
        <path
          d="M113.1 8.9v27c0 4 1.6 6.3 5.5 6.3 3.3 0 5.8-1.1 7.2-3V20.9c0-4-.4-7.4-1.7-10.8l12-1.2v27.6c0 6.1.6 8.8 1.6 11.7H126v-7.8h-.1c-1.7 5-4.9 8.6-11.6 8.6-8.5 0-11.6-5.1-11.6-12.8V20.9c0-4-.4-7.4-1.7-10.8l12.1-1.2"
        />
        <path
          d="M152.5 18.3c1.7-7.2 5-10 9.4-10 4 0 6.1 2.1 6.1 5.4 0 3-1.7 5.4-4.8 5.4-1.8 0-2.9-.8-3.7-1.6-.9-.8-1.5-1.7-2.4-1.7-2.1 0-4.4 3.5-4.4 9.4V35c0 4.8.4 9.6 1.3 13.2h-13c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.8-3.7.1.1v9.8h.2"
        />
        <path
          d="M177.2 24l13.1-1.2c-.1-6.2-1.1-9.9-5.4-9.9-4.4.1-7 3.6-7.7 11.1zm7.8 25c-10 0-18.2-6.6-18.2-19.3 0-12.9 7.9-21.5 18.5-21.5 10.1 0 14.8 6.4 14.8 18.5h-22.9v1.2c0 9.7 5 13.6 11.9 13.6 6.2 0 9-2.5 10.8-4.3l.2.6C198.3 43.6 193.7 49 185 49z"
        />
      </g>
    </svg>
  </div>
  <div>
    <svg
      aria-labelledby="nature-home-page-title"
      className=""
      focusable="false"
      height="7.5em"
      role="img"
      viewBox="0 0 200 49"
    >
      <title
        id="nature-home-page-title"
      >
        Nature
      </title>
      <g>
        <path
          d="M12.8 8.4l.1.1v8.4h.2c1.7-4.8 6-8.7 12.2-8.7 8.1 0 10.5 4 10.5 11.7v15.2c0 4.6.3 9.4 1.4 13h-13c1.1-3.4 1.2-7.6 1.2-12.6V21.1c0-3.5-1.4-5.2-5.3-5.2-3 0-5.2.8-6.9 2.3v17.4c0 5 .1 9.2 1.2 12.6H1.5c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.9-3.7"
        />
        <path
          d="M59.8 40.7V26.5c-.8 1.2-1.8 1.9-4.7 3.2-3.7 1.8-5 3.8-5 7.9 0 3.4 1.9 5.6 4.9 5.6 3 .1 4-1 4.8-2.5zM56.4 8.3c10.1 0 13.8 4 13.8 12.2v17.2c0 3.1 1.2 4 3.7 4 .4 0 1.7-.2 2.1-.6-.2 1.2-.4 1.8-.6 2.5-1.2 3.4-3.3 5.4-7.5 5.4-5 0-7.5-3.5-7.6-7.1h-.1c-1.7 5-4.9 7.1-10 7.1-6.3 0-10.3-3.8-10.3-9.7 0-6.2 5.6-8.9 11.5-11.2 5.6-2.2 8.6-3.8 8.6-7.8v-.8c0-4.4-1.4-6.6-5.5-6.6-2.6 0-3.5 1.2-4.1 3.7-.8 3.8-2.3 5.1-4.8 5.1-2.2 0-4.3-1.5-4.3-4.3-.2-5.4 7.3-9.1 15.1-9.1z"
        />
        <path
          d="M98.7 43.9C97.4 47 94.1 49 89.4 49c-8 0-11.1-4-11.1-11.4v-23h-3.8v-.3L88.4 0l.2.1v9.1h10l-1 5.5h-8.9V36c0 4.1 1.7 5.7 5.4 5.7 2.8 0 4.3-.4 5.6-1.1-.3 1.4-.5 2.2-1 3.3"
        />
        <path
          d="M113.1 8.9v27c0 4 1.6 6.3 5.5 6.3 3.3 0 5.8-1.1 7.2-3V20.9c0-4-.4-7.4-1.7-10.8l12-1.2v27.6c0 6.1.6 8.8 1.6 11.7H126v-7.8h-.1c-1.7 5-4.9 8.6-11.6 8.6-8.5 0-11.6-5.1-11.6-12.8V20.9c0-4-.4-7.4-1.7-10.8l12.1-1.2"
        />
        <path
          d="M152.5 18.3c1.7-7.2 5-10 9.4-10 4 0 6.1 2.1 6.1 5.4 0 3-1.7 5.4-4.8 5.4-1.8 0-2.9-.8-3.7-1.6-.9-.8-1.5-1.7-2.4-1.7-2.1 0-4.4 3.5-4.4 9.4V35c0 4.8.4 9.6 1.3 13.2h-13c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.8-3.7.1.1v9.8h.2"
        />
        <path
          d="M177.2 24l13.1-1.2c-.1-6.2-1.1-9.9-5.4-9.9-4.4.1-7 3.6-7.7 11.1zm7.8 25c-10 0-18.2-6.6-18.2-19.3 0-12.9 7.9-21.5 18.5-21.5 10.1 0 14.8 6.4 14.8 18.5h-22.9v1.2c0 9.7 5 13.6 11.9 13.6 6.2 0 9-2.5 10.8-4.3l.2.6C198.3 43.6 193.7 49 185 49z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots LogosSVG PdfLogoSVG 1`] = `
<div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "svg { border: 1px solid red;}",
      }
    }
  />
  <div>
    <svg
      aria-hidden="true"
      focusable="false"
      height="1.5em"
      viewBox="0 0 30 30"
    >
      <path
        d="M29.2,20.3c-0.2,0.1-0.7,0.2-1,0.2c-1.1,0-2.4-0.5-4.3-1.3c0.7-0.1,1.4-0.1,2-0.1c1.1,0,1.4,0,2.5,0.3 C29.4,19.7,29.4,20.2,29.2,20.3L29.2,20.3z M10.3,20.5c0.4-0.7,0.9-1.5,1.3-2.4c1.1-2,1.8-3.6,2.3-4.9c1,1.8,2.3,3.4,3.7,4.6 c0.2,0.2,0.4,0.3,0.6,0.5C15.2,18.9,12.6,19.6,10.3,20.5z M13.8,1.3c0.6,0,0.9,1.5,1,2.9c0,1.4-0.3,2.4-0.7,3.1 c-0.3-1.1-0.5-2.8-0.5-3.9C13.6,3.4,13.6,1.3,13.8,1.3z M2.1,28.3c0.3-0.9,1.7-2.8,3.7-4.4c0.1-0.1,0.4-0.4,0.7-0.7 C4.4,26.5,3,27.9,2.1,28.3L2.1,28.3z M29.8,18.4c-0.6-0.6-1.9-0.9-4-0.9c-1.4,0-3,0.1-4.8,0.3c-0.8-0.4-1.6-0.9-2.2-1.5 c-1.7-1.6-3.1-3.8-4-6.2c0.1-0.2,0.1-0.4,0.1-0.6c0,0,0.9-5.4,0.7-7.2c0-0.3-0.1-0.3-0.1-0.5l-0.1-0.2c-0.3-0.6-0.8-1.2-1.6-1.2 h-0.5l0,0c-0.9,0-1.6,0.5-1.8,1.1c-0.6,2.1,0,5.3,1.1,9.4l-0.3,0.7c-0.8,1.9-1.7,3.8-2.6,5.4l-0.1,0.2c-0.9,1.8-1.7,3.3-2.5,4.5 l-0.8,0.4c-0.1,0-1.4,0.7-1.7,0.9C2,24.6,0.3,26.3,0,27.7c-0.1,0.4,0,1,0.4,1.3l0.7,0.4c0.3,0.2,0.7,0.2,1,0.2c1.9,0,4-2.3,7-7.5 c3.4-1.1,7.3-2,10.7-2.6c2.6,1.5,5.8,2.5,7.8,2.5c0.4,0,0.7,0,0.9-0.1c0.4-0.1,0.7-0.3,0.9-0.6c0.4-0.6,0.5-1.4,0.4-2.2 C30.2,18.9,30,18.6,29.8,18.4L29.8,18.4z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      focusable="false"
      height="3em"
      viewBox="0 0 30 30"
    >
      <path
        d="M29.2,20.3c-0.2,0.1-0.7,0.2-1,0.2c-1.1,0-2.4-0.5-4.3-1.3c0.7-0.1,1.4-0.1,2-0.1c1.1,0,1.4,0,2.5,0.3 C29.4,19.7,29.4,20.2,29.2,20.3L29.2,20.3z M10.3,20.5c0.4-0.7,0.9-1.5,1.3-2.4c1.1-2,1.8-3.6,2.3-4.9c1,1.8,2.3,3.4,3.7,4.6 c0.2,0.2,0.4,0.3,0.6,0.5C15.2,18.9,12.6,19.6,10.3,20.5z M13.8,1.3c0.6,0,0.9,1.5,1,2.9c0,1.4-0.3,2.4-0.7,3.1 c-0.3-1.1-0.5-2.8-0.5-3.9C13.6,3.4,13.6,1.3,13.8,1.3z M2.1,28.3c0.3-0.9,1.7-2.8,3.7-4.4c0.1-0.1,0.4-0.4,0.7-0.7 C4.4,26.5,3,27.9,2.1,28.3L2.1,28.3z M29.8,18.4c-0.6-0.6-1.9-0.9-4-0.9c-1.4,0-3,0.1-4.8,0.3c-0.8-0.4-1.6-0.9-2.2-1.5 c-1.7-1.6-3.1-3.8-4-6.2c0.1-0.2,0.1-0.4,0.1-0.6c0,0,0.9-5.4,0.7-7.2c0-0.3-0.1-0.3-0.1-0.5l-0.1-0.2c-0.3-0.6-0.8-1.2-1.6-1.2 h-0.5l0,0c-0.9,0-1.6,0.5-1.8,1.1c-0.6,2.1,0,5.3,1.1,9.4l-0.3,0.7c-0.8,1.9-1.7,3.8-2.6,5.4l-0.1,0.2c-0.9,1.8-1.7,3.3-2.5,4.5 l-0.8,0.4c-0.1,0-1.4,0.7-1.7,0.9C2,24.6,0.3,26.3,0,27.7c-0.1,0.4,0,1,0.4,1.3l0.7,0.4c0.3,0.2,0.7,0.2,1,0.2c1.9,0,4-2.3,7-7.5 c3.4-1.1,7.3-2,10.7-2.6c2.6,1.5,5.8,2.5,7.8,2.5c0.4,0,0.7,0,0.9-0.1c0.4-0.1,0.7-0.3,0.9-0.6c0.4-0.6,0.5-1.4,0.4-2.2 C30.2,18.9,30,18.6,29.8,18.4L29.8,18.4z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      focusable="false"
      height="4.5em"
      viewBox="0 0 30 30"
    >
      <path
        d="M29.2,20.3c-0.2,0.1-0.7,0.2-1,0.2c-1.1,0-2.4-0.5-4.3-1.3c0.7-0.1,1.4-0.1,2-0.1c1.1,0,1.4,0,2.5,0.3 C29.4,19.7,29.4,20.2,29.2,20.3L29.2,20.3z M10.3,20.5c0.4-0.7,0.9-1.5,1.3-2.4c1.1-2,1.8-3.6,2.3-4.9c1,1.8,2.3,3.4,3.7,4.6 c0.2,0.2,0.4,0.3,0.6,0.5C15.2,18.9,12.6,19.6,10.3,20.5z M13.8,1.3c0.6,0,0.9,1.5,1,2.9c0,1.4-0.3,2.4-0.7,3.1 c-0.3-1.1-0.5-2.8-0.5-3.9C13.6,3.4,13.6,1.3,13.8,1.3z M2.1,28.3c0.3-0.9,1.7-2.8,3.7-4.4c0.1-0.1,0.4-0.4,0.7-0.7 C4.4,26.5,3,27.9,2.1,28.3L2.1,28.3z M29.8,18.4c-0.6-0.6-1.9-0.9-4-0.9c-1.4,0-3,0.1-4.8,0.3c-0.8-0.4-1.6-0.9-2.2-1.5 c-1.7-1.6-3.1-3.8-4-6.2c0.1-0.2,0.1-0.4,0.1-0.6c0,0,0.9-5.4,0.7-7.2c0-0.3-0.1-0.3-0.1-0.5l-0.1-0.2c-0.3-0.6-0.8-1.2-1.6-1.2 h-0.5l0,0c-0.9,0-1.6,0.5-1.8,1.1c-0.6,2.1,0,5.3,1.1,9.4l-0.3,0.7c-0.8,1.9-1.7,3.8-2.6,5.4l-0.1,0.2c-0.9,1.8-1.7,3.3-2.5,4.5 l-0.8,0.4c-0.1,0-1.4,0.7-1.7,0.9C2,24.6,0.3,26.3,0,27.7c-0.1,0.4,0,1,0.4,1.3l0.7,0.4c0.3,0.2,0.7,0.2,1,0.2c1.9,0,4-2.3,7-7.5 c3.4-1.1,7.3-2,10.7-2.6c2.6,1.5,5.8,2.5,7.8,2.5c0.4,0,0.7,0,0.9-0.1c0.4-0.1,0.7-0.3,0.9-0.6c0.4-0.6,0.5-1.4,0.4-2.2 C30.2,18.9,30,18.6,29.8,18.4L29.8,18.4z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      focusable="false"
      height="6em"
      viewBox="0 0 30 30"
    >
      <path
        d="M29.2,20.3c-0.2,0.1-0.7,0.2-1,0.2c-1.1,0-2.4-0.5-4.3-1.3c0.7-0.1,1.4-0.1,2-0.1c1.1,0,1.4,0,2.5,0.3 C29.4,19.7,29.4,20.2,29.2,20.3L29.2,20.3z M10.3,20.5c0.4-0.7,0.9-1.5,1.3-2.4c1.1-2,1.8-3.6,2.3-4.9c1,1.8,2.3,3.4,3.7,4.6 c0.2,0.2,0.4,0.3,0.6,0.5C15.2,18.9,12.6,19.6,10.3,20.5z M13.8,1.3c0.6,0,0.9,1.5,1,2.9c0,1.4-0.3,2.4-0.7,3.1 c-0.3-1.1-0.5-2.8-0.5-3.9C13.6,3.4,13.6,1.3,13.8,1.3z M2.1,28.3c0.3-0.9,1.7-2.8,3.7-4.4c0.1-0.1,0.4-0.4,0.7-0.7 C4.4,26.5,3,27.9,2.1,28.3L2.1,28.3z M29.8,18.4c-0.6-0.6-1.9-0.9-4-0.9c-1.4,0-3,0.1-4.8,0.3c-0.8-0.4-1.6-0.9-2.2-1.5 c-1.7-1.6-3.1-3.8-4-6.2c0.1-0.2,0.1-0.4,0.1-0.6c0,0,0.9-5.4,0.7-7.2c0-0.3-0.1-0.3-0.1-0.5l-0.1-0.2c-0.3-0.6-0.8-1.2-1.6-1.2 h-0.5l0,0c-0.9,0-1.6,0.5-1.8,1.1c-0.6,2.1,0,5.3,1.1,9.4l-0.3,0.7c-0.8,1.9-1.7,3.8-2.6,5.4l-0.1,0.2c-0.9,1.8-1.7,3.3-2.5,4.5 l-0.8,0.4c-0.1,0-1.4,0.7-1.7,0.9C2,24.6,0.3,26.3,0,27.7c-0.1,0.4,0,1,0.4,1.3l0.7,0.4c0.3,0.2,0.7,0.2,1,0.2c1.9,0,4-2.3,7-7.5 c3.4-1.1,7.3-2,10.7-2.6c2.6,1.5,5.8,2.5,7.8,2.5c0.4,0,0.7,0,0.9-0.1c0.4-0.1,0.7-0.3,0.9-0.6c0.4-0.6,0.5-1.4,0.4-2.2 C30.2,18.9,30,18.6,29.8,18.4L29.8,18.4z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      focusable="false"
      height="7.5em"
      viewBox="0 0 30 30"
    >
      <path
        d="M29.2,20.3c-0.2,0.1-0.7,0.2-1,0.2c-1.1,0-2.4-0.5-4.3-1.3c0.7-0.1,1.4-0.1,2-0.1c1.1,0,1.4,0,2.5,0.3 C29.4,19.7,29.4,20.2,29.2,20.3L29.2,20.3z M10.3,20.5c0.4-0.7,0.9-1.5,1.3-2.4c1.1-2,1.8-3.6,2.3-4.9c1,1.8,2.3,3.4,3.7,4.6 c0.2,0.2,0.4,0.3,0.6,0.5C15.2,18.9,12.6,19.6,10.3,20.5z M13.8,1.3c0.6,0,0.9,1.5,1,2.9c0,1.4-0.3,2.4-0.7,3.1 c-0.3-1.1-0.5-2.8-0.5-3.9C13.6,3.4,13.6,1.3,13.8,1.3z M2.1,28.3c0.3-0.9,1.7-2.8,3.7-4.4c0.1-0.1,0.4-0.4,0.7-0.7 C4.4,26.5,3,27.9,2.1,28.3L2.1,28.3z M29.8,18.4c-0.6-0.6-1.9-0.9-4-0.9c-1.4,0-3,0.1-4.8,0.3c-0.8-0.4-1.6-0.9-2.2-1.5 c-1.7-1.6-3.1-3.8-4-6.2c0.1-0.2,0.1-0.4,0.1-0.6c0,0,0.9-5.4,0.7-7.2c0-0.3-0.1-0.3-0.1-0.5l-0.1-0.2c-0.3-0.6-0.8-1.2-1.6-1.2 h-0.5l0,0c-0.9,0-1.6,0.5-1.8,1.1c-0.6,2.1,0,5.3,1.1,9.4l-0.3,0.7c-0.8,1.9-1.7,3.8-2.6,5.4l-0.1,0.2c-0.9,1.8-1.7,3.3-2.5,4.5 l-0.8,0.4c-0.1,0-1.4,0.7-1.7,0.9C2,24.6,0.3,26.3,0,27.7c-0.1,0.4,0,1,0.4,1.3l0.7,0.4c0.3,0.2,0.7,0.2,1,0.2c1.9,0,4-2.3,7-7.5 c3.4-1.1,7.3-2,10.7-2.6c2.6,1.5,5.8,2.5,7.8,2.5c0.4,0,0.7,0,0.9-0.1c0.4-0.1,0.7-0.3,0.9-0.6c0.4-0.6,0.5-1.4,0.4-2.2 C30.2,18.9,30,18.6,29.8,18.4L29.8,18.4z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots LogosSVG TwitterLogoSVG 1`] = `
<div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "svg { border: 1px solid red;}",
      }
    }
  />
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="twitter-title"
      focusable="false"
      height="1.5em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="twitter-title"
      >
        Share on Twitter
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M20.8125,11.4875 C21.42,11.10375 21.8875,10.49625 22.105,9.7725 C21.5375,10.1275 20.90875,10.385 20.23875,10.5225 C19.70625,9.9225 18.9425,9.545 18.0975,9.545 C16.475,9.545 15.16,10.9325 15.16,12.6425 C15.16,12.885 15.185,13.1225 15.235,13.3475 C12.7975,13.2175 10.63125,11.985 9.1825,10.11 C8.93,10.56875 8.785,11.10125 8.785,11.66875 C8.785,12.74375 9.30375,13.69125 10.09125,14.2475 C9.61125,14.23125 9.1575,14.09 8.76125,13.86 L8.76125,13.8975 C8.76125,15.3975 9.77375,16.65125 11.11875,16.935 C10.87125,17.0075 10.6125,17.04375 10.34375,17.04375 C10.15625,17.04375 9.96875,17.025 9.79125,16.98875 C10.16625,18.22125 11.24875,19.11875 12.535,19.1425 C11.52875,19.97375 10.2625,20.4675 8.885,20.4675 C8.6475,20.4675 8.415,20.455 8.185,20.42625 C9.485,21.30375 11.02875,21.81625 12.6875,21.81625 C18.09,21.81625 21.04375,17.095 21.04375,13.00125 L21.03625,12.60125 C21.61125,12.16375 22.11125,11.6175 22.50125,10.99625 C21.97375,11.2425 21.4075,11.40875 20.81375,11.48375 L20.8125,11.4875 Z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="twitter-title"
      focusable="false"
      height="3em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="twitter-title"
      >
        Share on Twitter
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M20.8125,11.4875 C21.42,11.10375 21.8875,10.49625 22.105,9.7725 C21.5375,10.1275 20.90875,10.385 20.23875,10.5225 C19.70625,9.9225 18.9425,9.545 18.0975,9.545 C16.475,9.545 15.16,10.9325 15.16,12.6425 C15.16,12.885 15.185,13.1225 15.235,13.3475 C12.7975,13.2175 10.63125,11.985 9.1825,10.11 C8.93,10.56875 8.785,11.10125 8.785,11.66875 C8.785,12.74375 9.30375,13.69125 10.09125,14.2475 C9.61125,14.23125 9.1575,14.09 8.76125,13.86 L8.76125,13.8975 C8.76125,15.3975 9.77375,16.65125 11.11875,16.935 C10.87125,17.0075 10.6125,17.04375 10.34375,17.04375 C10.15625,17.04375 9.96875,17.025 9.79125,16.98875 C10.16625,18.22125 11.24875,19.11875 12.535,19.1425 C11.52875,19.97375 10.2625,20.4675 8.885,20.4675 C8.6475,20.4675 8.415,20.455 8.185,20.42625 C9.485,21.30375 11.02875,21.81625 12.6875,21.81625 C18.09,21.81625 21.04375,17.095 21.04375,13.00125 L21.03625,12.60125 C21.61125,12.16375 22.11125,11.6175 22.50125,10.99625 C21.97375,11.2425 21.4075,11.40875 20.81375,11.48375 L20.8125,11.4875 Z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="twitter-title"
      focusable="false"
      height="4.5em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="twitter-title"
      >
        Share on Twitter
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M20.8125,11.4875 C21.42,11.10375 21.8875,10.49625 22.105,9.7725 C21.5375,10.1275 20.90875,10.385 20.23875,10.5225 C19.70625,9.9225 18.9425,9.545 18.0975,9.545 C16.475,9.545 15.16,10.9325 15.16,12.6425 C15.16,12.885 15.185,13.1225 15.235,13.3475 C12.7975,13.2175 10.63125,11.985 9.1825,10.11 C8.93,10.56875 8.785,11.10125 8.785,11.66875 C8.785,12.74375 9.30375,13.69125 10.09125,14.2475 C9.61125,14.23125 9.1575,14.09 8.76125,13.86 L8.76125,13.8975 C8.76125,15.3975 9.77375,16.65125 11.11875,16.935 C10.87125,17.0075 10.6125,17.04375 10.34375,17.04375 C10.15625,17.04375 9.96875,17.025 9.79125,16.98875 C10.16625,18.22125 11.24875,19.11875 12.535,19.1425 C11.52875,19.97375 10.2625,20.4675 8.885,20.4675 C8.6475,20.4675 8.415,20.455 8.185,20.42625 C9.485,21.30375 11.02875,21.81625 12.6875,21.81625 C18.09,21.81625 21.04375,17.095 21.04375,13.00125 L21.03625,12.60125 C21.61125,12.16375 22.11125,11.6175 22.50125,10.99625 C21.97375,11.2425 21.4075,11.40875 20.81375,11.48375 L20.8125,11.4875 Z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="twitter-title"
      focusable="false"
      height="6em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="twitter-title"
      >
        Share on Twitter
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M20.8125,11.4875 C21.42,11.10375 21.8875,10.49625 22.105,9.7725 C21.5375,10.1275 20.90875,10.385 20.23875,10.5225 C19.70625,9.9225 18.9425,9.545 18.0975,9.545 C16.475,9.545 15.16,10.9325 15.16,12.6425 C15.16,12.885 15.185,13.1225 15.235,13.3475 C12.7975,13.2175 10.63125,11.985 9.1825,10.11 C8.93,10.56875 8.785,11.10125 8.785,11.66875 C8.785,12.74375 9.30375,13.69125 10.09125,14.2475 C9.61125,14.23125 9.1575,14.09 8.76125,13.86 L8.76125,13.8975 C8.76125,15.3975 9.77375,16.65125 11.11875,16.935 C10.87125,17.0075 10.6125,17.04375 10.34375,17.04375 C10.15625,17.04375 9.96875,17.025 9.79125,16.98875 C10.16625,18.22125 11.24875,19.11875 12.535,19.1425 C11.52875,19.97375 10.2625,20.4675 8.885,20.4675 C8.6475,20.4675 8.415,20.455 8.185,20.42625 C9.485,21.30375 11.02875,21.81625 12.6875,21.81625 C18.09,21.81625 21.04375,17.095 21.04375,13.00125 L21.03625,12.60125 C21.61125,12.16375 22.11125,11.6175 22.50125,10.99625 C21.97375,11.2425 21.4075,11.40875 20.81375,11.48375 L20.8125,11.4875 Z"
      />
    </svg>
  </div>
  <div>
    <svg
      aria-hidden="true"
      aria-labelledby="twitter-title"
      focusable="false"
      height="7.5em"
      role="img"
      viewBox="0 0 30 30"
    >
      <title
        id="twitter-title"
      >
        Share on Twitter
      </title>
      <path
        d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
      />
      <path
        d="M20.8125,11.4875 C21.42,11.10375 21.8875,10.49625 22.105,9.7725 C21.5375,10.1275 20.90875,10.385 20.23875,10.5225 C19.70625,9.9225 18.9425,9.545 18.0975,9.545 C16.475,9.545 15.16,10.9325 15.16,12.6425 C15.16,12.885 15.185,13.1225 15.235,13.3475 C12.7975,13.2175 10.63125,11.985 9.1825,10.11 C8.93,10.56875 8.785,11.10125 8.785,11.66875 C8.785,12.74375 9.30375,13.69125 10.09125,14.2475 C9.61125,14.23125 9.1575,14.09 8.76125,13.86 L8.76125,13.8975 C8.76125,15.3975 9.77375,16.65125 11.11875,16.935 C10.87125,17.0075 10.6125,17.04375 10.34375,17.04375 C10.15625,17.04375 9.96875,17.025 9.79125,16.98875 C10.16625,18.22125 11.24875,19.11875 12.535,19.1425 C11.52875,19.97375 10.2625,20.4675 8.885,20.4675 C8.6475,20.4675 8.415,20.455 8.185,20.42625 C9.485,21.30375 11.02875,21.81625 12.6875,21.81625 C18.09,21.81625 21.04375,17.095 21.04375,13.00125 L21.03625,12.60125 C21.61125,12.16375 22.11125,11.6175 22.50125,10.99625 C21.97375,11.2425 21.4075,11.40875 20.81375,11.48375 L20.8125,11.4875 Z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots MainHeader alt pdf available 1`] = `
<header
  className=" e1v8wgvg1 css-10yqtjv-style-style-StyledBox"
>
  <div
    aria-label={null}
    className=" e1v8wgvg0 css-gd69it-style-style-StyledCluster"
    data-container="main external links"
  >
    <ul>
      <li>
        <a
          data-category="external"
          data-track="click"
          data-track-label="journal-homepage"
          href="https://www.nature.com/nature/"
        >
          <svg
            aria-labelledby="nature-home-page-title"
            className=""
            focusable="false"
            height="2em"
            role="img"
            viewBox="0 0 200 49"
          >
            <title
              id="nature-home-page-title"
            >
              Nature
            </title>
            <g>
              <path
                d="M12.8 8.4l.1.1v8.4h.2c1.7-4.8 6-8.7 12.2-8.7 8.1 0 10.5 4 10.5 11.7v15.2c0 4.6.3 9.4 1.4 13h-13c1.1-3.4 1.2-7.6 1.2-12.6V21.1c0-3.5-1.4-5.2-5.3-5.2-3 0-5.2.8-6.9 2.3v17.4c0 5 .1 9.2 1.2 12.6H1.5c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.9-3.7"
              />
              <path
                d="M59.8 40.7V26.5c-.8 1.2-1.8 1.9-4.7 3.2-3.7 1.8-5 3.8-5 7.9 0 3.4 1.9 5.6 4.9 5.6 3 .1 4-1 4.8-2.5zM56.4 8.3c10.1 0 13.8 4 13.8 12.2v17.2c0 3.1 1.2 4 3.7 4 .4 0 1.7-.2 2.1-.6-.2 1.2-.4 1.8-.6 2.5-1.2 3.4-3.3 5.4-7.5 5.4-5 0-7.5-3.5-7.6-7.1h-.1c-1.7 5-4.9 7.1-10 7.1-6.3 0-10.3-3.8-10.3-9.7 0-6.2 5.6-8.9 11.5-11.2 5.6-2.2 8.6-3.8 8.6-7.8v-.8c0-4.4-1.4-6.6-5.5-6.6-2.6 0-3.5 1.2-4.1 3.7-.8 3.8-2.3 5.1-4.8 5.1-2.2 0-4.3-1.5-4.3-4.3-.2-5.4 7.3-9.1 15.1-9.1z"
              />
              <path
                d="M98.7 43.9C97.4 47 94.1 49 89.4 49c-8 0-11.1-4-11.1-11.4v-23h-3.8v-.3L88.4 0l.2.1v9.1h10l-1 5.5h-8.9V36c0 4.1 1.7 5.7 5.4 5.7 2.8 0 4.3-.4 5.6-1.1-.3 1.4-.5 2.2-1 3.3"
              />
              <path
                d="M113.1 8.9v27c0 4 1.6 6.3 5.5 6.3 3.3 0 5.8-1.1 7.2-3V20.9c0-4-.4-7.4-1.7-10.8l12-1.2v27.6c0 6.1.6 8.8 1.6 11.7H126v-7.8h-.1c-1.7 5-4.9 8.6-11.6 8.6-8.5 0-11.6-5.1-11.6-12.8V20.9c0-4-.4-7.4-1.7-10.8l12.1-1.2"
              />
              <path
                d="M152.5 18.3c1.7-7.2 5-10 9.4-10 4 0 6.1 2.1 6.1 5.4 0 3-1.7 5.4-4.8 5.4-1.8 0-2.9-.8-3.7-1.6-.9-.8-1.5-1.7-2.4-1.7-2.1 0-4.4 3.5-4.4 9.4V35c0 4.8.4 9.6 1.3 13.2h-13c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.8-3.7.1.1v9.8h.2"
              />
              <path
                d="M177.2 24l13.1-1.2c-.1-6.2-1.1-9.9-5.4-9.9-4.4.1-7 3.6-7.7 11.1zm7.8 25c-10 0-18.2-6.6-18.2-19.3 0-12.9 7.9-21.5 18.5-21.5 10.1 0 14.8 6.4 14.8 18.5h-22.9v1.2c0 9.7 5 13.6 11.9 13.6 6.2 0 9-2.5 10.8-4.3l.2.6C198.3 43.6 193.7 49 185 49z"
              />
            </g>
          </svg>
        </a>
      </li>
      <li
        className="current-issue"
      >
        <a
          data-category="external"
          data-track="click"
          data-track-label="current-issue"
          href="https://www.nature.com/nature/current_issue.html"
        >
          Current issue
        </a>
      </li>
      <li
        aria-label="PDF download"
        className=" e1v8wgvg0 css-p2vew2-style-style-StyledCluster"
        data-container={null}
      >
        <ul>
          <li>
            <a
              data-category="external"
              data-track="click"
              data-track-label="pdf-version"
              href="public/pdf/d41586-019-00000-0.pdf"
            >
              PDF version
            </a>
          </li>
          <li>
            <a
              data-category="external"
              data-track="click"
              data-track-label="alt-pdf-version"
              href="public/pdf/d41586-019-00000-0-alt.pdf"
            >
              PDF en Español
            </a>
          </li>
        </ul>
      </li>
      <li
        aria-label="Social sharing"
        className=" e1v8wgvg0 css-p2vew2-style-style-StyledCluster"
        data-container="main social links"
      >
        <ul>
          <li>
            <a
              data-category="social"
              data-track="click"
              data-track-label="facebook"
              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.nature.com%2Farticles%2Fd41586-019-00000-0"
              rel="noreferrer noopener"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                aria-labelledby="facebook-title"
                focusable="false"
                height="2em"
                role="img"
                viewBox="0 0 30 30"
              >
                <title
                  id="facebook-title"
                >
                  Share on Facebook
                </title>
                <path
                  d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
                />
                <path
                  d="M15.89625,22.8625 L12.57125,22.8625 L12.57125,15.02125 L10.90875,15.02125 L10.90875,12.31875 L12.57125,12.31875 L12.57125,10.69625 C12.57125,8.4925 13.50875,7.18 16.175,7.18 L18.39375,7.18 L18.39375,9.8825 L17.00625,9.8825 C15.96875,9.8825 15.9,10.26 15.9,10.965 L15.895,12.3175 L18.4075,12.3175 L18.115,15.02 L15.89625,15.02 L15.89625,22.8625 Z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              data-category="social"
              data-track="click"
              data-track-label="twitter"
              href="https://twitter.com/intent/tweet?text=Headline%20headline.%20Standfirst%20standfirst%20standfirst%20standfirst%20standfirst%20%20standfirst%20standfirst%20standfirst%20standfirst%20https%3A%2F%2Fwww.nature.com%2Farticles%2Fd41586-019-00000-0"
              rel="noreferrer noopener"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                aria-labelledby="twitter-title"
                focusable="false"
                height="2em"
                role="img"
                viewBox="0 0 30 30"
              >
                <title
                  id="twitter-title"
                >
                  Share on Twitter
                </title>
                <path
                  d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
                />
                <path
                  d="M20.8125,11.4875 C21.42,11.10375 21.8875,10.49625 22.105,9.7725 C21.5375,10.1275 20.90875,10.385 20.23875,10.5225 C19.70625,9.9225 18.9425,9.545 18.0975,9.545 C16.475,9.545 15.16,10.9325 15.16,12.6425 C15.16,12.885 15.185,13.1225 15.235,13.3475 C12.7975,13.2175 10.63125,11.985 9.1825,10.11 C8.93,10.56875 8.785,11.10125 8.785,11.66875 C8.785,12.74375 9.30375,13.69125 10.09125,14.2475 C9.61125,14.23125 9.1575,14.09 8.76125,13.86 L8.76125,13.8975 C8.76125,15.3975 9.77375,16.65125 11.11875,16.935 C10.87125,17.0075 10.6125,17.04375 10.34375,17.04375 C10.15625,17.04375 9.96875,17.025 9.79125,16.98875 C10.16625,18.22125 11.24875,19.11875 12.535,19.1425 C11.52875,19.97375 10.2625,20.4675 8.885,20.4675 C8.6475,20.4675 8.415,20.455 8.185,20.42625 C9.485,21.30375 11.02875,21.81625 12.6875,21.81625 C18.09,21.81625 21.04375,17.095 21.04375,13.00125 L21.03625,12.60125 C21.61125,12.16375 22.11125,11.6175 22.50125,10.99625 C21.97375,11.2425 21.4075,11.40875 20.81375,11.48375 L20.8125,11.4875 Z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              data-category="social"
              data-track="click"
              data-track-label="email"
              href="mailto:?subject%3DHeadline%20headline%26body%3DStandfirst%20standfirst%20standfirst%20standfirst%20standfirst%20%20standfirst%20standfirst%20standfirst%20standfirst%20https%3A%2F%2Fwww.nature.com%2Farticles%2Fd41586-019-00000-0"
              rel="noreferrer noopener"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                aria-labelledby="email-title"
                focusable="false"
                height="2em"
                role="img"
                viewBox="0 0 30 30"
              >
                <title
                  id="email-title"
                >
                  Share by email
                </title>
                <path
                  d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
                />
                <path
                  d="M15,15.3269887 L10.6248577,11.9177869 C10.4236021,11.7609644 10.1299323,11.7927468 9.96892789,11.988775 C9.80792343,12.1848031 9.84055341,12.4708451 10.041809,12.6276676 L14.7012493,16.2584003 C14.8680779,16.3940555 15.1152493,16.4013884 15.2915244,16.2640313 C15.2939898,16.2622325 15.2963784,16.2603294 15.2987507,16.2584003 L19.958191,12.6276676 C20.1594466,12.4708451 20.1920766,12.1848031 20.0310721,11.988775 C19.8700677,11.7927468 19.5763979,11.7609644 19.3751423,11.9177869 L15,15.3269887 Z M9,10 L21,10 C21.5522847,10 22,10.4477153 22,11 L22,19 C22,19.5522847 21.5522847,20 21,20 L9,20 C8.44771525,20 8,19.5522847 8,19 L8,11 C8,10.4477153 8.44771525,10 9,10 Z"
                />
              </svg>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</header>
`;

exports[`Storyshots MainHeader default 1`] = `
<header
  className=" e1v8wgvg1 css-10yqtjv-style-style-StyledBox"
>
  <div
    aria-label={null}
    className=" e1v8wgvg0 css-gd69it-style-style-StyledCluster"
    data-container="main external links"
  >
    <ul>
      <li>
        <a
          data-category="external"
          data-track="click"
          data-track-label="journal-homepage"
          href="https://www.nature.com/nature/"
        >
          <svg
            aria-labelledby="nature-home-page-title"
            className=""
            focusable="false"
            height="2em"
            role="img"
            viewBox="0 0 200 49"
          >
            <title
              id="nature-home-page-title"
            >
              Nature
            </title>
            <g>
              <path
                d="M12.8 8.4l.1.1v8.4h.2c1.7-4.8 6-8.7 12.2-8.7 8.1 0 10.5 4 10.5 11.7v15.2c0 4.6.3 9.4 1.4 13h-13c1.1-3.4 1.2-7.6 1.2-12.6V21.1c0-3.5-1.4-5.2-5.3-5.2-3 0-5.2.8-6.9 2.3v17.4c0 5 .1 9.2 1.2 12.6H1.5c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.9-3.7"
              />
              <path
                d="M59.8 40.7V26.5c-.8 1.2-1.8 1.9-4.7 3.2-3.7 1.8-5 3.8-5 7.9 0 3.4 1.9 5.6 4.9 5.6 3 .1 4-1 4.8-2.5zM56.4 8.3c10.1 0 13.8 4 13.8 12.2v17.2c0 3.1 1.2 4 3.7 4 .4 0 1.7-.2 2.1-.6-.2 1.2-.4 1.8-.6 2.5-1.2 3.4-3.3 5.4-7.5 5.4-5 0-7.5-3.5-7.6-7.1h-.1c-1.7 5-4.9 7.1-10 7.1-6.3 0-10.3-3.8-10.3-9.7 0-6.2 5.6-8.9 11.5-11.2 5.6-2.2 8.6-3.8 8.6-7.8v-.8c0-4.4-1.4-6.6-5.5-6.6-2.6 0-3.5 1.2-4.1 3.7-.8 3.8-2.3 5.1-4.8 5.1-2.2 0-4.3-1.5-4.3-4.3-.2-5.4 7.3-9.1 15.1-9.1z"
              />
              <path
                d="M98.7 43.9C97.4 47 94.1 49 89.4 49c-8 0-11.1-4-11.1-11.4v-23h-3.8v-.3L88.4 0l.2.1v9.1h10l-1 5.5h-8.9V36c0 4.1 1.7 5.7 5.4 5.7 2.8 0 4.3-.4 5.6-1.1-.3 1.4-.5 2.2-1 3.3"
              />
              <path
                d="M113.1 8.9v27c0 4 1.6 6.3 5.5 6.3 3.3 0 5.8-1.1 7.2-3V20.9c0-4-.4-7.4-1.7-10.8l12-1.2v27.6c0 6.1.6 8.8 1.6 11.7H126v-7.8h-.1c-1.7 5-4.9 8.6-11.6 8.6-8.5 0-11.6-5.1-11.6-12.8V20.9c0-4-.4-7.4-1.7-10.8l12.1-1.2"
              />
              <path
                d="M152.5 18.3c1.7-7.2 5-10 9.4-10 4 0 6.1 2.1 6.1 5.4 0 3-1.7 5.4-4.8 5.4-1.8 0-2.9-.8-3.7-1.6-.9-.8-1.5-1.7-2.4-1.7-2.1 0-4.4 3.5-4.4 9.4V35c0 4.8.4 9.6 1.3 13.2h-13c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.8-3.7.1.1v9.8h.2"
              />
              <path
                d="M177.2 24l13.1-1.2c-.1-6.2-1.1-9.9-5.4-9.9-4.4.1-7 3.6-7.7 11.1zm7.8 25c-10 0-18.2-6.6-18.2-19.3 0-12.9 7.9-21.5 18.5-21.5 10.1 0 14.8 6.4 14.8 18.5h-22.9v1.2c0 9.7 5 13.6 11.9 13.6 6.2 0 9-2.5 10.8-4.3l.2.6C198.3 43.6 193.7 49 185 49z"
              />
            </g>
          </svg>
        </a>
      </li>
      <li
        className="current-issue"
      >
        <a
          data-category="external"
          data-track="click"
          data-track-label="current-issue"
          href="https://www.nature.com/nature/current_issue.html"
        >
          Current issue
        </a>
      </li>
      <li
        aria-label="Social sharing"
        className=" e1v8wgvg0 css-p2vew2-style-style-StyledCluster"
        data-container="main social links"
      >
        <ul>
          <li>
            <a
              data-category="social"
              data-track="click"
              data-track-label="facebook"
              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.nature.com%2Farticles%2Fd41586-019-00000-0"
              rel="noreferrer noopener"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                aria-labelledby="facebook-title"
                focusable="false"
                height="2em"
                role="img"
                viewBox="0 0 30 30"
              >
                <title
                  id="facebook-title"
                >
                  Share on Facebook
                </title>
                <path
                  d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
                />
                <path
                  d="M15.89625,22.8625 L12.57125,22.8625 L12.57125,15.02125 L10.90875,15.02125 L10.90875,12.31875 L12.57125,12.31875 L12.57125,10.69625 C12.57125,8.4925 13.50875,7.18 16.175,7.18 L18.39375,7.18 L18.39375,9.8825 L17.00625,9.8825 C15.96875,9.8825 15.9,10.26 15.9,10.965 L15.895,12.3175 L18.4075,12.3175 L18.115,15.02 L15.89625,15.02 L15.89625,22.8625 Z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              data-category="social"
              data-track="click"
              data-track-label="twitter"
              href="https://twitter.com/intent/tweet?text=Headline%20headline.%20Standfirst%20standfirst%20standfirst%20standfirst%20standfirst%20%20standfirst%20standfirst%20standfirst%20standfirst%20https%3A%2F%2Fwww.nature.com%2Farticles%2Fd41586-019-00000-0"
              rel="noreferrer noopener"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                aria-labelledby="twitter-title"
                focusable="false"
                height="2em"
                role="img"
                viewBox="0 0 30 30"
              >
                <title
                  id="twitter-title"
                >
                  Share on Twitter
                </title>
                <path
                  d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
                />
                <path
                  d="M20.8125,11.4875 C21.42,11.10375 21.8875,10.49625 22.105,9.7725 C21.5375,10.1275 20.90875,10.385 20.23875,10.5225 C19.70625,9.9225 18.9425,9.545 18.0975,9.545 C16.475,9.545 15.16,10.9325 15.16,12.6425 C15.16,12.885 15.185,13.1225 15.235,13.3475 C12.7975,13.2175 10.63125,11.985 9.1825,10.11 C8.93,10.56875 8.785,11.10125 8.785,11.66875 C8.785,12.74375 9.30375,13.69125 10.09125,14.2475 C9.61125,14.23125 9.1575,14.09 8.76125,13.86 L8.76125,13.8975 C8.76125,15.3975 9.77375,16.65125 11.11875,16.935 C10.87125,17.0075 10.6125,17.04375 10.34375,17.04375 C10.15625,17.04375 9.96875,17.025 9.79125,16.98875 C10.16625,18.22125 11.24875,19.11875 12.535,19.1425 C11.52875,19.97375 10.2625,20.4675 8.885,20.4675 C8.6475,20.4675 8.415,20.455 8.185,20.42625 C9.485,21.30375 11.02875,21.81625 12.6875,21.81625 C18.09,21.81625 21.04375,17.095 21.04375,13.00125 L21.03625,12.60125 C21.61125,12.16375 22.11125,11.6175 22.50125,10.99625 C21.97375,11.2425 21.4075,11.40875 20.81375,11.48375 L20.8125,11.4875 Z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              data-category="social"
              data-track="click"
              data-track-label="email"
              href="mailto:?subject%3DHeadline%20headline%26body%3DStandfirst%20standfirst%20standfirst%20standfirst%20standfirst%20%20standfirst%20standfirst%20standfirst%20standfirst%20https%3A%2F%2Fwww.nature.com%2Farticles%2Fd41586-019-00000-0"
              rel="noreferrer noopener"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                aria-labelledby="email-title"
                focusable="false"
                height="2em"
                role="img"
                viewBox="0 0 30 30"
              >
                <title
                  id="email-title"
                >
                  Share by email
                </title>
                <path
                  d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
                />
                <path
                  d="M15,15.3269887 L10.6248577,11.9177869 C10.4236021,11.7609644 10.1299323,11.7927468 9.96892789,11.988775 C9.80792343,12.1848031 9.84055341,12.4708451 10.041809,12.6276676 L14.7012493,16.2584003 C14.8680779,16.3940555 15.1152493,16.4013884 15.2915244,16.2640313 C15.2939898,16.2622325 15.2963784,16.2603294 15.2987507,16.2584003 L19.958191,12.6276676 C20.1594466,12.4708451 20.1920766,12.1848031 20.0310721,11.988775 C19.8700677,11.7927468 19.5763979,11.7609644 19.3751423,11.9177869 L15,15.3269887 Z M9,10 L21,10 C21.5522847,10 22,10.4477153 22,11 L22,19 C22,19.5522847 21.5522847,20 21,20 L9,20 C8.44771525,20 8,19.5522847 8,19 L8,11 C8,10.4477153 8.44771525,10 9,10 Z"
                />
              </svg>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</header>
`;

exports[`Storyshots MainHeader pdf available 1`] = `
<header
  className=" e1v8wgvg1 css-10yqtjv-style-style-StyledBox"
>
  <div
    aria-label={null}
    className=" e1v8wgvg0 css-gd69it-style-style-StyledCluster"
    data-container="main external links"
  >
    <ul>
      <li>
        <a
          data-category="external"
          data-track="click"
          data-track-label="journal-homepage"
          href="https://www.nature.com/nature/"
        >
          <svg
            aria-labelledby="nature-home-page-title"
            className=""
            focusable="false"
            height="2em"
            role="img"
            viewBox="0 0 200 49"
          >
            <title
              id="nature-home-page-title"
            >
              Nature
            </title>
            <g>
              <path
                d="M12.8 8.4l.1.1v8.4h.2c1.7-4.8 6-8.7 12.2-8.7 8.1 0 10.5 4 10.5 11.7v15.2c0 4.6.3 9.4 1.4 13h-13c1.1-3.4 1.2-7.6 1.2-12.6V21.1c0-3.5-1.4-5.2-5.3-5.2-3 0-5.2.8-6.9 2.3v17.4c0 5 .1 9.2 1.2 12.6H1.5c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.9-3.7"
              />
              <path
                d="M59.8 40.7V26.5c-.8 1.2-1.8 1.9-4.7 3.2-3.7 1.8-5 3.8-5 7.9 0 3.4 1.9 5.6 4.9 5.6 3 .1 4-1 4.8-2.5zM56.4 8.3c10.1 0 13.8 4 13.8 12.2v17.2c0 3.1 1.2 4 3.7 4 .4 0 1.7-.2 2.1-.6-.2 1.2-.4 1.8-.6 2.5-1.2 3.4-3.3 5.4-7.5 5.4-5 0-7.5-3.5-7.6-7.1h-.1c-1.7 5-4.9 7.1-10 7.1-6.3 0-10.3-3.8-10.3-9.7 0-6.2 5.6-8.9 11.5-11.2 5.6-2.2 8.6-3.8 8.6-7.8v-.8c0-4.4-1.4-6.6-5.5-6.6-2.6 0-3.5 1.2-4.1 3.7-.8 3.8-2.3 5.1-4.8 5.1-2.2 0-4.3-1.5-4.3-4.3-.2-5.4 7.3-9.1 15.1-9.1z"
              />
              <path
                d="M98.7 43.9C97.4 47 94.1 49 89.4 49c-8 0-11.1-4-11.1-11.4v-23h-3.8v-.3L88.4 0l.2.1v9.1h10l-1 5.5h-8.9V36c0 4.1 1.7 5.7 5.4 5.7 2.8 0 4.3-.4 5.6-1.1-.3 1.4-.5 2.2-1 3.3"
              />
              <path
                d="M113.1 8.9v27c0 4 1.6 6.3 5.5 6.3 3.3 0 5.8-1.1 7.2-3V20.9c0-4-.4-7.4-1.7-10.8l12-1.2v27.6c0 6.1.6 8.8 1.6 11.7H126v-7.8h-.1c-1.7 5-4.9 8.6-11.6 8.6-8.5 0-11.6-5.1-11.6-12.8V20.9c0-4-.4-7.4-1.7-10.8l12.1-1.2"
              />
              <path
                d="M152.5 18.3c1.7-7.2 5-10 9.4-10 4 0 6.1 2.1 6.1 5.4 0 3-1.7 5.4-4.8 5.4-1.8 0-2.9-.8-3.7-1.6-.9-.8-1.5-1.7-2.4-1.7-2.1 0-4.4 3.5-4.4 9.4V35c0 4.8.4 9.6 1.3 13.2h-13c1.2-3.6 1.4-8.4 1.4-13V21.1c0-3.8-1.4-7.2-3-9l12.8-3.7.1.1v9.8h.2"
              />
              <path
                d="M177.2 24l13.1-1.2c-.1-6.2-1.1-9.9-5.4-9.9-4.4.1-7 3.6-7.7 11.1zm7.8 25c-10 0-18.2-6.6-18.2-19.3 0-12.9 7.9-21.5 18.5-21.5 10.1 0 14.8 6.4 14.8 18.5h-22.9v1.2c0 9.7 5 13.6 11.9 13.6 6.2 0 9-2.5 10.8-4.3l.2.6C198.3 43.6 193.7 49 185 49z"
              />
            </g>
          </svg>
        </a>
      </li>
      <li
        className="current-issue"
      >
        <a
          data-category="external"
          data-track="click"
          data-track-label="current-issue"
          href="https://www.nature.com/nature/current_issue.html"
        >
          Current issue
        </a>
      </li>
      <li
        aria-label="PDF download"
        className=" e1v8wgvg0 css-p2vew2-style-style-StyledCluster"
        data-container={null}
      >
        <ul>
          <li>
            <a
              data-category="external"
              data-track="click"
              data-track-label="pdf-version"
              href="public/pdf/d41586-019-00000-0.pdf"
            >
              PDF version
            </a>
          </li>
        </ul>
      </li>
      <li
        aria-label="Social sharing"
        className=" e1v8wgvg0 css-p2vew2-style-style-StyledCluster"
        data-container="main social links"
      >
        <ul>
          <li>
            <a
              data-category="social"
              data-track="click"
              data-track-label="facebook"
              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.nature.com%2Farticles%2Fd41586-019-00000-0"
              rel="noreferrer noopener"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                aria-labelledby="facebook-title"
                focusable="false"
                height="2em"
                role="img"
                viewBox="0 0 30 30"
              >
                <title
                  id="facebook-title"
                >
                  Share on Facebook
                </title>
                <path
                  d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
                />
                <path
                  d="M15.89625,22.8625 L12.57125,22.8625 L12.57125,15.02125 L10.90875,15.02125 L10.90875,12.31875 L12.57125,12.31875 L12.57125,10.69625 C12.57125,8.4925 13.50875,7.18 16.175,7.18 L18.39375,7.18 L18.39375,9.8825 L17.00625,9.8825 C15.96875,9.8825 15.9,10.26 15.9,10.965 L15.895,12.3175 L18.4075,12.3175 L18.115,15.02 L15.89625,15.02 L15.89625,22.8625 Z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              data-category="social"
              data-track="click"
              data-track-label="twitter"
              href="https://twitter.com/intent/tweet?text=Headline%20headline.%20Standfirst%20standfirst%20standfirst%20standfirst%20standfirst%20%20standfirst%20standfirst%20standfirst%20standfirst%20https%3A%2F%2Fwww.nature.com%2Farticles%2Fd41586-019-00000-0"
              rel="noreferrer noopener"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                aria-labelledby="twitter-title"
                focusable="false"
                height="2em"
                role="img"
                viewBox="0 0 30 30"
              >
                <title
                  id="twitter-title"
                >
                  Share on Twitter
                </title>
                <path
                  d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
                />
                <path
                  d="M20.8125,11.4875 C21.42,11.10375 21.8875,10.49625 22.105,9.7725 C21.5375,10.1275 20.90875,10.385 20.23875,10.5225 C19.70625,9.9225 18.9425,9.545 18.0975,9.545 C16.475,9.545 15.16,10.9325 15.16,12.6425 C15.16,12.885 15.185,13.1225 15.235,13.3475 C12.7975,13.2175 10.63125,11.985 9.1825,10.11 C8.93,10.56875 8.785,11.10125 8.785,11.66875 C8.785,12.74375 9.30375,13.69125 10.09125,14.2475 C9.61125,14.23125 9.1575,14.09 8.76125,13.86 L8.76125,13.8975 C8.76125,15.3975 9.77375,16.65125 11.11875,16.935 C10.87125,17.0075 10.6125,17.04375 10.34375,17.04375 C10.15625,17.04375 9.96875,17.025 9.79125,16.98875 C10.16625,18.22125 11.24875,19.11875 12.535,19.1425 C11.52875,19.97375 10.2625,20.4675 8.885,20.4675 C8.6475,20.4675 8.415,20.455 8.185,20.42625 C9.485,21.30375 11.02875,21.81625 12.6875,21.81625 C18.09,21.81625 21.04375,17.095 21.04375,13.00125 L21.03625,12.60125 C21.61125,12.16375 22.11125,11.6175 22.50125,10.99625 C21.97375,11.2425 21.4075,11.40875 20.81375,11.48375 L20.8125,11.4875 Z"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              data-category="social"
              data-track="click"
              data-track-label="email"
              href="mailto:?subject%3DHeadline%20headline%26body%3DStandfirst%20standfirst%20standfirst%20standfirst%20standfirst%20%20standfirst%20standfirst%20standfirst%20standfirst%20https%3A%2F%2Fwww.nature.com%2Farticles%2Fd41586-019-00000-0"
              rel="noreferrer noopener"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                aria-labelledby="email-title"
                focusable="false"
                height="2em"
                role="img"
                viewBox="0 0 30 30"
              >
                <title
                  id="email-title"
                >
                  Share by email
                </title>
                <path
                  d="M30,15A15,15,0,1,1,15,0,15,15,0,0,1,30,15ZM15,2A13,13,0,1,0,28,15,13,13,0,0,0,15,2Z"
                />
                <path
                  d="M15,15.3269887 L10.6248577,11.9177869 C10.4236021,11.7609644 10.1299323,11.7927468 9.96892789,11.988775 C9.80792343,12.1848031 9.84055341,12.4708451 10.041809,12.6276676 L14.7012493,16.2584003 C14.8680779,16.3940555 15.1152493,16.4013884 15.2915244,16.2640313 C15.2939898,16.2622325 15.2963784,16.2603294 15.2987507,16.2584003 L19.958191,12.6276676 C20.1594466,12.4708451 20.1920766,12.1848031 20.0310721,11.988775 C19.8700677,11.7927468 19.5763979,11.7609644 19.3751423,11.9177869 L15,15.3269887 Z M9,10 L21,10 C21.5522847,10 22,10.4477153 22,11 L22,19 C22,19.5522847 21.5522847,20 21,20 L9,20 C8.44771525,20 8,19.5522847 8,19 L8,11 C8,10.4477153 8.44771525,10 9,10 Z"
                />
              </svg>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</header>
`;
